420：demo Synchronize modifications2

--- a/zh-CN/300.develop/200.application-development-of-oracle-mode/200.sample-program-of-oracle-mode/100.java-of-oracle-mode/100.oceanbase-connector-j-connection-to-oceanbase-database-sample-program.md
+++ b/zh-CN/300.develop/200.application-development-of-oracle-mode/200.sample-program-of-oracle-mode/100.java-of-oracle-mode/100.oceanbase-connector-j-connection-to-oceanbase-database-sample-program.md
@@ -45,7 +45,7 @@
     连接 OceanBase 数据库 Oracle 模式 URL 示例如下：
 
     ```shell
-    jdbc:oceanbase://host:port/schema_name?user=$user_name&password=$password&socketTimeout=7200000&useUnicode=true&characterEncoding=UTF-8&useCursorFetch=true&defaultFetchSize=100&useSSL=false&rewriteBatchedStatements=true&cachePrepStmts=true&useServerPrepStmts=true&usePieceData=true&allowSendParamTypes=true
+    jdbc:oceanbase://host:port/schema_name?user=$user_name&password=$password
     ```
 
     **参数说明：**
@@ -55,19 +55,6 @@
     * `schema_name`：需要访问的 Schema 名称。
     * `user_name`：提供租户的连接账户。ODP 连接的方式格式：`用户名@租户名#集群名` 或者 `集群名:租户名:用户名`；直连方式格式：`用户名@租户名`。
     * `password`：提供账户密码。
-    * `socketTimeout=7200000&useUnicode=true&characterEncoding=UTF-8&useCursorFetch=true&defaultFetchSize=100&useSSL=false&rewriteBatchedStatements=true&cachePrepStmts=true&useServerPrepStmts=true&usePieceData=true&allowSendParamTypes=true`：为额外的连接属性。
-
-      * `socketTimeout`：定义了网络 Socket 超时（`SO_TIMEOUT`），以毫秒为单位。值为 0 时将禁用此超时。
-      * `useUnicode`：指定字符的编码、解码格式。 默认值：`true`。
-      * `characterEncoding`：支持 MySQL URL 选项的字符编码。默认值：`utf8`。
-      * `useCursorFetch`：获取游标结果集。如果 `useServerPrepStmts=false`，当 `useCursorFetch` 设置为 `true` 时，会强制将 `useServerPrepStmts` 更改为 `true`。
-      * `defaultFetchSize`：驱动程序将在所有新创建的 Statement 上调用 `setFetchSize(n)`。默认值：0。
-      * `useSSL`：强制连接时是否使用 `SSL/TLS`。 默认值：`false`。
-      * `rewriteBatchedStatements`：对于插入查询，重写 `batchedStatement` 以在单个 `executeQuery` 中执行。`rewriteBatchedStatements` 处于活跃状态时，`useServerPrepStmts` 选项被设置为 `false`。 默认值：`false`。
-      * `cachePrepStmts`：如果 `useServerPrepStmts = true`，则将准备好的信息缓存在 LRU 缓存中，以避免重新准备命令。
-      * `useServerPrepStmts`：在执行之前，在服务器端准备 `PrepareStatement`。重复使用相同查询的应用程序具有激活该选项的值，但通常情况是使用直接命令（文本协议）。如果 `rewriteBatchedStatements` 设置为 `true`，则此选项将设置为 `false`。 默认值：`false`。
-      * `usePieceData`：只有在 Oracle 模式下，当 `useServerPrepStmts=true` 时才会生效，即满足 `usePieceData=true&useServerPrepStmts=true`。该参数默认关闭。
-      * `allowSendParamTypes`：用于指定在 JDBC 驱动程序向数据库发送`PreparedStatement` 时，是否需要发送参数类型信息。
 
     更多 URL 参数说明信息，请参见 [数据库 URL](https://www.oceanbase.com/docs/common-oceanbase-connector-j-cn-10000000001943209)。
 
@@ -260,7 +247,7 @@
 
     * `jdbc:oceanbase`：表示使用 OceanBase 的 JDBC 驱动程序连接数据库。
     * `host:port`：表示 OceanBase 数据库的 IP 地址和端口号。
-    * `opt1=val1&opt2=val2...`：额外的连接属性，即 URL 参数。
+    * `opt1=val1&opt2=val2...`：额外的连接属性，即 URL 参数。更多 URL 额外的连接属性说明信息，请参见 [数据库 URL](https://www.oceanbase.com/docs/common-oceanbase-connector-j-cn-10000000001943209)。
     * `schema_name`：表示连接的 Schema 名。
     * `String user = "user_name"`：定义了登陆数据库所需的用户名。
     * `String password = "******"`：定义了登陆数据库所需的密码。
@@ -478,14 +465,13 @@ public class InsertAndSelectExample {
 * OBServer 节点的 IP 地址为 `10.10.10.1`。
 * 访问端口使用的是 2881。
 * 需要访问的 Schema 名称为 `sys`。
-* 设置 URL 额外的连接属性为 `socketTimeout=7200000&useUnicode=true&characterEncoding=UTF-8&useCursorFetch=true&defaultFetchSize=100&useSSL=false&rewriteBatchedStatements=true&cachePrepStmts=true&useServerPrepStmts=true&usePieceData=true&allowSendParamTypes=true`。
 * 租户的连接账户是 `sys@oracle001`。`oracle001` 是在 OceanBase 数据库中创建的一个 Oracle 模式的用户租户，`sys` 是租户 `oracle001` 的用户名称。
 * 密码是 `******`。
 
 **示例代码如下：**
 
 ```java
-String url = "jdbc:oceanbase://10.10.10.1:2881/sys?socketTimeout=7200000&useUnicode=true&characterEncoding=UTF-8&useCursorFetch=true&defaultFetchSize=100&useSSL=false&rewriteBatchedStatements=true&cachePrepStmts=true&useServerPrepStmts=true&usePieceData=true&allowSendParamTypes=true";
+String url = "jdbc:oceanbase://10.10.10.1:2881/sys";
 String user = "root@oracle001";
 String password = "******";
 ```
