--- a/zh-CN/900.release-notes/10200.community-edition-history-release/10100.V3.1/300.V3.1.2.md
+++ b/zh-CN/900.release-notes/10200.community-edition-history-release/10100.V3.1/300.V3.1.2.md
@@ -1,12 +1,20 @@
 # OceanBase 数据库社区版 V3.1.2
 
-本文主要介绍 3.1.2 版本 OceanBase 数据库的新特征，以及在之前版本数据库基础上新增的功能和做出的改动。
+#RNDate#2021-12-30
 
-## V3.1.2
+本文主要介绍 OceanBase 数据库 V3.1.2 版本的新特征，以及在之前版本数据库基础上新增的功能和做出的改动。
 
-### 概要说明
+## V3.1.2_CE
 
-在 OceanBase 3.1.2 版本，我们为 OceanBase 数据库的用户提供了免费的图形界面开发者工具（ODC）、运维监控云平台（OCP）、数据迁移工具（OMS）、导数工具（OBLOADER 和 OBDUMPER）。
+### 版本信息
+
+* 发布时间：2021 年 12 月 30 日
+* 版本号：V3.1.2_CE
+* RPM 版本号：oceanbase-ce-3.1.2-10000392021123010
+
+### 版本定位
+
+在 OceanBase V3.1.2 版本，我们为 OceanBase 数据库的用户提供了免费的图形界面开发者工具（ODC）、运维监控云平台（OCP）、数据迁移工具（OMS）、导数工具（OBLOADER 和 OBDUMPER）。
 
 OceanBase 数据库支持在线跨版本轮转升级，可通过 OBD 指定需要升级到的版本，自动完成最佳升级路径解析和应用升级，全过程无需人工干预且不影响业务运行。优化了热点行数据更新，性能提升了 300%。优化了分区表 SQL PLAN 淘汰机制。优化了底层通信代码等。新增了多个 SQL MODE 和系统函数。
 
@@ -90,7 +98,7 @@ OMS 的核心功能如下：
 
 * OBLOADER 和 OBDUMPER 支持按照分区、指定条件、单表、多表、全库、以及自定义查询 SQL 导出，支持数据预处理、字段映射导入，兼容 SQL，CSV、 CUT 等多种文本格式。
 
-#### 在线跨版本轮转升级
+### 在线跨版本轮转升级
 
 您可以通过 `obd cluster upgrade` 命令升级 OceanBase 数据库。OBD 自动识别匹配版本间的升级路径，对每个 Zone 进行轮转升级。具体命令如下：
 
@@ -158,7 +166,7 @@ OceanBase 数据库底层通信框架使用 CPU 时钟（SYS_clock_gettime）获
   
 * 完善 OceanBase 社区版本文档。文档包括架构设计原理、性能调优、故障处理、日常维护指导等。
 
-### 问题修复
+### 缺陷修复
 
 * 修复 __all_virtual_memory_info 虚拟表因 MEMOEY APPEND 失败导致显示租户信息不全的问题。
 
