--- a/zh-CN/700.reference/1200.database-proxy/500.logical-connection/200.displays-the-status-of-a-session.md
+++ b/zh-CN/700.reference/1200.database-proxy/500.logical-connection/200.displays-the-status-of-a-session.md
@@ -254,6 +254,6 @@
     | db_name_version                  | ODP 保存的当前数据库变量的版本                    |
     | is_checksum_supported            | 当前 Server Sesion 是否开启了校验和                    |
     | is_safe_read_weak_supported      | 是否支持安全弱读                    |
-    | is_checksum_switch_supported     | ?                    |
-    | checksum_switch                  | ?                    |
+    | is_checksum_switch_supported     | 校验和开关是否支持实时开启或关闭                  |
+    | checksum_switch                  | 校验和的开关状态                |
     | enable_extra_ok_packet_for_stats | 是否支持额外 OK 包                    |
