--- a/zh-CN/400.deploy/300.deploy-oceanbase-database-enterprise/300.graphical-interface-deployment/500.create-oceanbase-tenant/200.create-tenant-graphical.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-database-enterprise/300.graphical-interface-deployment/500.create-oceanbase-tenant/200.create-tenant-graphical.md
@@ -42,7 +42,7 @@
    | 选择集群 | 选择创建的租户所属集群。|
    | 租户模式 | 选择 **租户模式**。支持 Oracle 模式和 MySQL 模式。|
    | 租户名 | 租户名称格式为英文大小写字母、数字和下划线的组合，长度为 2 ~ 64 个字符。|
-   | 管理员初始密码 |<ul><li>对于 MySQL 模式，其管理员账户为 "root"。</li><li>对于 Oracle 模式，其管理员账户为 "SYS"。</li><li>密码格式：长度为 8 ~ 32，且至少包含 2 个数字、2 个大写字母、2 个小写字母和 2 个特殊字符，支持的特殊字符为 ~!@#%^&*_-+=`|(){}[]:;',.?/</li></ul> |
+   | 管理员初始密码 |<ul><li>对于 MySQL 模式，其管理员账户为 "root"。</li><li>对于 Oracle 模式，其管理员账户为 "SYS"。</li><li>密码格式：长度为 8 ~ 32，且至少包含 2 个数字、2 个大写字母、2 个小写字母和 2 个特殊字符，支持的特殊字符为 <code>\~!@#%\^\&\*_-+=\`\|(){}\[\]:;',.?/</code> </li></ul> |
    | 字符集 | <ul><li>MySQL 模式，可选字符集有 utf8mb4、binary、gbk 和 gb18030；默认为 utf8mb4。</li><li> Oracle 模式，可选字符集有 utf8mb4、gbk 和 gb18030，默认为 utf8mb4。</li></ul>|
    | Collation | <blockquote><b>说明</b></br>只有在选择 **租户模式**时，选择 MySQL 模式才会有选择 **Collation** 操作。<ul><li>对于 binary 字符集，可选 <b>Collation</b> 有：binary。</li><li>对于 utf8mb4 字符集，可选 <b>Collation</b> 有：utf8mb4_bin、utf8mb4_general_ci、utf8mb4_unicode_ci。缺省为 utf8mb4_general_ci。</li><li>对于 gbk 字符集，可选 <b>Collation</b> 有：gbk_bin、gbk_chinese_ci。缺省为 gbk_chinese_ci。</li><li>对于 gb18030 字符集，可选 <b>Collation</b> 有：gb18030_bin。缺省为 gb18030_chinese_ci。</li></ul></blockquote> |
    | 备注（可选）| 备注说明信息。 |
