--- a/zh-CN/600.manage/600.backup-and-recovery/400.data-backup/720.change-the-backup-destination.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/400.data-backup/720.change-the-backup-destination.md
@@ -14,7 +14,7 @@
 
    配置备份目的端时，要求新的备份目的端所在的目录为空。有关配置备份目的端的详细操作，请参见 [备份前准备](100.preparation-before-data-backup.md)。
 
-4. 完成后，查询视图 `CDB_OB_BACKUP_PARAMETER` 或 `DBA_OB_BACKUP_PARAMETER`，确认新的备份目的端是否配置成功，详细操作请参见 [查看数据备份相关参数](700.parameters-of-data-backup.md)。
+4. 完成后，在`sys` 租户下查询视图 `CDB_OB_BACKUP_PARAMETER` 或在用户租户下查询视图 `DBA_OB_BACKUP_PARAMETER`，确认新的备份目的端是否配置成功，详细操作请参见 [查看数据备份相关参数](700.parameters-of-data-backup.md)。
 
 ## 后续操作
 
