--- a/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/820.change-the-archive-destination.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/820.change-the-archive-destination.md
@@ -12,7 +12,7 @@
 
    配置归档目的端时，要求新的归档目的端所在的目录为空。有关配置归档目的端的详细操作，请参见 [日志归档的准备工作](200.preparation-before-log-archive.md) 中 **配置归档目的端** 的内容。
 
-4. 完成后，查询视图 `CDB_OB_ARCHIVE_DEST` 或 `DBA_OB_ARCHIVE_DEST` 的 `LOG_ARCHIVE_DEST` 列，确认新的归档目的端是否配置成功，详细操作请参见 [查看归档参数](800.view-parameters-of-log-archive.md)。
+4. 完成后，在`sys` 租户下查询视图 `CDB_OB_ARCHIVE_DEST` 的 `LOG_ARCHIVE_DEST` 列，或者在用户租户下查询视图 `DBA_OB_ARCHIVE_DEST` 的 `LOG_ARCHIVE_DEST` 列，确认新的归档目的端是否配置成功，详细操作请参见 [查看归档参数](800.view-parameters-of-log-archive.md)。
 
 ## 后续操作
 
