--- a/zh-CN/200.quickstart/800.tutorial-list.md
+++ b/zh-CN/200.quickstart/800.tutorial-list.md
@@ -60,19 +60,19 @@
 
 本视频介绍如何通过 Python 驱动连接和使用 OceanBase 数据库。
 
-<video data-code="9000245" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/05%20python%20%E8%BF%9E%E6%8E%A5%E6%95%B0%E6%8D%AE%E5%BA%93.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000245" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/05%20python%20%E8%BF%9E%E6%8E%A5%E6%95%B0%E6%8D%AE%E5%BA%93_20230824.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 C 应用程序
 
 本视频介绍了如何通过 OceanBase Connector/C 驱动连接并使用 OceanBase 数据库。
 
-<video data-code="9000246" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/06%20%E5%88%9B%E5%BB%BA%20c%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000246" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/06%20%E5%88%9B%E5%BB%BA%20c%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F_20230824.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 Go 应用程序
 
 本视频介绍 Go 应用程序示例如何通过驱动 Go-SQL-Driver/MySQL 连接并使用 OceanBase 数据库。
 
-<video data-code="9000247" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/07%20%E5%88%9B%E5%BB%BA%20go%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000247" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/07%20%E5%88%9B%E5%BB%BA%20go%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F_20230824.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 Java 应用程序
 
