--- a/zh-CN/200.quickstart/800.tutorial-list.md
+++ b/zh-CN/200.quickstart/800.tutorial-list.md
@@ -42,13 +42,13 @@
 
 本视频介绍了使用 OBD 快速部署社区版 OceanBase 数据库。
 
-<video data-code="9000242" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/02%20%E4%BD%BF%E7%94%A8%20obd%20%E9%83%A8%E7%BD%B2%20oceanbase.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000242" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/00%20%E4%BD%BF%E7%94%A8%20odb%20%E9%83%A8%E7%BD%B2%20oceanbase%20%E6%95%B0%E6%8D%AE%E5%BA%93_20230824.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 使用 Docker 快速部署 OceanBase 数据库
 
 本视频介绍了使用 Docker 快速部署社区版 OceanBase 数据库。
 
-<video data-code="9000243" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/02%20%E4%BD%BF%E7%94%A8%20docker%20%E9%83%A8%E7%BD%B2%20oceanbase.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000243" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/02%20%E4%BD%BF%E7%94%A8%20docker%20%E9%83%A8%E7%BD%B2%20oceanbase_20230824.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## OceanBase 数据库的基本操作
 
@@ -60,19 +60,19 @@
 
 本视频介绍如何通过 Python 驱动连接和使用 OceanBase 数据库。
 
-<video data-code="9000245" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/05%20python%20%E8%BF%9E%E6%8E%A5%E6%95%B0%E6%8D%AE%E5%BA%93.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000245" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/05%20python%20%E8%BF%9E%E6%8E%A5%E6%95%B0%E6%8D%AE%E5%BA%93_20230824.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 C 应用程序
 
 本视频介绍了如何通过 OceanBase Connector/C 驱动连接并使用 OceanBase 数据库。
 
-<video data-code="9000246" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/06%20%E5%88%9B%E5%BB%BA%20c%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000246" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/06%20%E5%88%9B%E5%BB%BA%20c%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F_20230824.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 Go 应用程序
 
 本视频介绍 Go 应用程序示例如何通过驱动 Go-SQL-Driver/MySQL 连接并使用 OceanBase 数据库。
 
-<video data-code="9000247" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/07%20%E5%88%9B%E5%BB%BA%20go%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000247" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/07%20%E5%88%9B%E5%BB%BA%20go%20%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F_20230824.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 创建 Java 应用程序
 
@@ -96,19 +96,19 @@
 
 本视频带您体验 OceanBase 的 Operational OLAP 功能。
 
-<video data-code="9000638" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/%E4%BD%93%E9%AA%8C%20operational%20olap_1.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000638" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/13%20%E4%BD%93%E9%AA%8C%20operational%20olap_20230824.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 体验并行导入 & 数据压缩
 
 本视频介绍了并行导入和数据压缩相关的使用及说明。
 
-<video data-code="9000497" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/11%20%E5%B9%B6%E8%A1%8C%E5%AF%BC%E5%85%A5.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000497" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/11%20%E5%B9%B6%E8%A1%8C%E5%AF%BC%E5%85%A5_20230824.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 体验多租户特性
 
 本视频介绍了 OceanBase 数据库具有多租户的特性。在 OceanBase 数据库中，每一个租户即一个实例（类比 MySQL instance）。租户与租户之间数据、权限、资源隔离，每个租户拥有自己独立的访问端口及 CPU、内存访问资源。
 
-<video data-code="9000498" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/%E4%BD%93%E9%AA%8C%20oceanbase%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%9A%84%E5%A4%9A%E7%A7%9F%E6%88%B7%E8%83%BD%E5%8A%9B.mp4" controls="" width="811px" height="456.188px"></video>
+<video data-code="9000498" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/video-center/video/video/12%20%E4%BD%93%E9%AA%8C%20oceanbase%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%9A%84%E5%A4%9A%E7%A7%9F%E6%88%B7%E8%83%BD%E5%8A%9B_20230824.mp4" controls="" width="811px" height="456.188px"></video>
 
 ## 体验 DDL
 
