--- a/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/300.ora-01000-to-ora-01499-of-oracle-mode.md
+++ b/zh-CN/700.reference/900.error-code/700.error-code-of-oracle-mode/300.ora-01000-to-ora-01499-of-oracle-mode.md
@@ -130,7 +130,7 @@ ORA-01012：not logged on
 
 * [创建表失败，错误代码 5360/ORA-01031](https://www.oceanbase.com/knowledge-base/oceanbase-database-20000001004?back=kb)
 
-ORA-01045：user %./*s lacks CREATE SESSION privilege; logon denied
+ORA-01045：user %.\*s lacks CREATE SESSION privilege; logon denied
 --------------------------------------------------------------------------------------
 
 * OceanBase 错误码：5361
@@ -163,7 +163,7 @@ ORA-01092：OceanBase instance terminated. Disconnection forced
 
 * 解决方式：有关详细信息，请检查告警日志。然后重新启动 Session。
 
-ORA-01400：cannot insert NULL into '(%./*s)'
+ORA-01400：cannot insert NULL into '(%.\*s)'
 ----------------------------------------------------------------
 
 * OceanBase 错误码：4235
@@ -172,7 +172,7 @@ ORA-01400：cannot insert NULL into '(%./*s)'
 
 * 错误原因：尝试向之前列出的对象中插入 `NULL` 值，但是这些对象不能接受 `NULL` 值。
 
-ORA-01400：cannot insert NULL into (%./*s)
+ORA-01400：cannot insert NULL into (%.\*s)
 --------------------------------------------------------------
 
 * OceanBase 错误码：5030
@@ -371,7 +371,7 @@ ORA-01437：cannot have join with CONNECT BY
 
 * 错误原因：不能与 `CONNECT BY` 联接。
 
-ORA-01438：value larger than specified precision allowed for this column '%./*s' at row %ld
+ORA-01438：value larger than specified precision allowed for this column '%.\*s' at row %ld
 ---------------------------------------------------------------------------------------------------------------
 
 * OceanBase 错误码：4224
