--- a/zh-CN/700.reference/200.system-management/700.memory-management/500.memory-management-within-a-tenant.md
+++ b/zh-CN/700.reference/200.system-management/700.memory-management/500.memory-management-within-a-tenant.md
@@ -4,7 +4,13 @@
 
 ### 系统租户
 
-系统租户是 OceanBase 数据库的集群管理员为安装 OceanBase 数据库时自动创建，系统租户的内存大小是由默认资源单元 `sys_unit_config` 的规格定义的，其默认值的计算公式为 `min((memory_limit - system_memory)/4, 16G)`，因为这是一个正常的租户，所以可以通过 `alter resource` 修改租户规格大小。
+系统租户是 OceanBase 数据库的集群管理员为安装 OceanBase 数据库时自动创建。从 V4.2.1 版本开始，系统租户实际可使用的内存上限为：`hidden_sys_memory + unit_sys_memory`。
+
+其中：
+
+* hidden_sys_memory 的值由隐藏配置项 `_hidden_sys_tenant_memory` 控制。隐藏配置项 `_hidden_sys_tenant_memory` 的默认值为 0，表示系统会按照一定的规则进行自适应分配 hidden_sys_memory 的值。不建议修改隐藏配置项 `_hidden_sys_tenant_memory` 的值。
+
+* unit_sys_memory 的值由资源规格 `sys_unit_config` 中的 `memory_size` 决定。`sys_unit_config` 是系统租户默认的资源规格，其 `memory_size` 默认值的计算公式为 `min((memory_limit - system_memory)/4, 16G)`。由于系统租户也是一个正常的租户，故可以通过 `ALTER RESOURCE` 语句修改 `sys_unit_config` 中 `MEMORY_SIZE` 的值。
 
 ### 用户租户
 
