--- a/zh-CN/700.reference/500.system-reference/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/1600.gv-memory-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.system-reference/500.system-view-of-oracle-mode/300.performance-view-of-oracle-mode/1600.gv-memory-of-oracle-mode.md
@@ -39,3 +39,18 @@ V4.x 版本中有关内存 CTX 的名称和含义如下：
 | RPC_CTX_ID | 表示 RPC 框架内存上下文 ID  |
 | PKT_NIO |  表示网络框架内存（pkt_nio） |
 | SCHEMA_SERVICE | 表示 Schema 元信息内存，如表、库等  |
+
+在 OceanBase 数据库中，每个 SQL 执行或操作都会对应特定的 CTX。由于数据量的大小、操作的复杂度等不同，所使用的内存 CTX 可能导致内存使用量的增长。
+以下是一些常见的 SQL 执行或操作，可能会导致某些内存 CTX 的使用量增长:
+
+* 大数据量的排序（ORDER BY、GROUP BY 等）：排序操作需要将数据加载到内存中进行排序，可能会导致 PLAN_CACHE_CTX_ID、MEMSTORE_CTX_ID、DEFAULT_CTX_ID 中的内存增长。
+
+* 大数据量的聚合（SUM、AVG、MAX、MIN 等）：聚合操作需要将数据加载到内存中进行计算，可能会导致 PLAN_CACHE_CTX_ID、MEMSTORE_CTX_ID、DEFAULT_CTX_ID 中的内存增长。
+
+* 大数据量的连接（JOIN）：连接操作需要将数据加载到内存中进行匹配，可能会导致 PLAN_CACHE_CTX_ID、MEMSTORE_CTX_ID、DEFAULT_CTX_ID 中的内存增长。
+
+* 大数据量的查询（SELECT）：查询操作需要将数据加载到内存中进行过滤和排序，可能会导致 PLAN_CACHE_CTX_ID、MEMSTORE_CTX_ID、DEFAULT_CTX_ID 中的内存增长。
+
+* 大数据量的写入（INSERT、UPDATE、DELETE 等）：写入操作需要对事务进行管理和处理，可能会导致 TRANS_CTX_MGR_ID、MEMSTORE_CTX_ID、DEFAULT_CTX_ID 中的内存增长。
+
+* 大数据量的日志（REDO、UNDO、BINLOG 等）：日志操作需要将数据加载到内存中进行操作，可能会导致 TRANS_CTX_MGR_ID、DEFAULT_CTX_ID、LOB_CTX_ID、TX_DATA_TABLE 中的内存增长。
