410 Aone：Low error handling3

--- a/zh-CN/300.develop/100.application-development-of-mysql-mode/400.read-data-of-mysql-mode/700.multi-table-join-query-of-mysql-mode/300.left-join-of-mysql-mode.md
+++ b/zh-CN/300.develop/100.application-development-of-mysql-mode/400.read-data-of-mysql-mode/700.multi-table-join-query-of-mysql-mode/300.left-join-of-mysql-mode.md
@@ -8,7 +8,7 @@
 
 外联接包括全联接（FULL JOIN）、左联接（LEFT JOIN）和右联接（RIGHT JOIN）。外联接返回满足联接条件的所有行，同时从一个表返回没有使用的行，在另一个表相应位置填充 `NULL`。
 
-本文主要提供左联接的示例指导，左联接相关示例请参见 [全联接](../700.multi-table-join-query-of-mysql-mode/200.full-join-of-mysql-mode.md)，右联接相关示例请参见 [右联接](../700.multi-table-join-query-of-mysql-mode/400.right-join-of-mysql-mode.md)。
+本文主要提供左联接的示例指导，全联接相关示例请参见 [全联接](../700.multi-table-join-query-of-mysql-mode/200.full-join-of-mysql-mode.md)，右联接相关示例请参见 [右联接](../700.multi-table-join-query-of-mysql-mode/400.right-join-of-mysql-mode.md)。
 
 ## LEFT JOIN 语法
 
