--- a/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/800.tenant-scale-in-and-out/400.adjust-primary-zone.md
+++ b/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/800.tenant-scale-in-and-out/400.adjust-primary-zone.md
@@ -6,7 +6,13 @@
 
 调整 Primary Zone 前，需要开启租户内的负载均衡。租户内的负载均衡由租户级配置项 `enable_rebalance` 控制。该配置项在系统租户下用于控制是否进行租户间的负载均衡；用户租户下用于控制是否进行租户内均衡。默认值为 `true`，设置后不需要重启 OBServer 节点，立即生效。
 
-开启租户内的负载均衡的语句如下：
+系统租户开启租户间负载均衡的语句如下：
+
+```sql
+ALTER SYSTEM SET enable_rebalance = true TENANT = 'sys';
+```
+
+系统租户或用户租户开启租户内的负载均衡的语句如下：
 
 * 系统租户开启指定租户内的负载均衡
 
@@ -19,16 +25,22 @@
    示例：
 
    ```sql
-   ALTER SYSTEM SET enable_rebalance = true TENANT = 'mq_t1';
+   ALTER SYSTEM SET enable_rebalance = true TENANT = 'oracle';
    ```
   
-* 系统租户开启租户间的负载均衡，同时开启所有租户内的负载均衡
+* 系统租户开启所有用户租户其租户内的负载均衡
 
    ```sql
-   ALTER SYSTEM SET enable_rebalance = true TENANT = ALL;
+   ALTER SYSTEM SET enable_rebalance = true TENANT = all_user;
    ```
 
-   该语句表示系统租户下和用户租户下配置项 `enable_rebalance` 的值均为 `true`。
+   或者
+
+   ```sql
+   ALTER SYSTEM SET enable_rebalance = true TENANT = all;
+   ```
+
+   该语句表示用户租户下配置项 `enable_rebalance` 的值均为 `true`。
 
 * 用户租户开启本租户内的负载均衡
 
