--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/100.numeric-functions-of-oracle-mode/1200.generator-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/100.numeric-functions-of-oracle-mode/1200.generator-of-oracle-mode.md
@@ -10,7 +10,7 @@ GENERATOR(N)
 
 该函数为 Table Function 框架中的一个内置函数，即允许在 Table Function 中调用它，最终返回 N 行数据。N 是一个大于等于 0 的 64 位正整数。
 
-Table function 是一种在 SQL 语言中使用的函数，它能够返回一张数据表作为结果。与传统的 SQL 函数只能返回标量值不同，Table Function 可以返回多行、多列的数据集。 
+Table Function 是一种在 SQL 语言中使用的函数，它能够返回一张数据表作为结果。与传统的 SQL 函数只能返回标量值不同，Table Function 可以返回多行、多列的数据集。 
 
 `TABLE(GENERATOR(N))` 并不真的生成任何数据，它只会产生连续 N 个 “行”，如果需要生成数据，需要在 `SELECT` 后面添加具体的表达式，例如常量、变量、函数、UDF 等。`TABLE(GENERATOR(N))` 可以用于并行执行，例如并行 `SELECT`、并行 DML 等，但是负责读取 `TABLE(GENERATOR(N))` 生成行的线程只会有一个，也就是说，包含 `TABLE(GENERATOR(N))` 的 DFO 的 `DOP=1`。
 
