--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/100.numeric-functions-of-oracle-mode/1600.normal-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/100.numeric-functions-of-oracle-mode/1600.normal-of-oracle-mode.md
@@ -41,7 +41,7 @@ obclient> SELECT v, COUNT(*) FROM (SELECT ROUND(NORMAL(3, 0.1, RANDOM()), 1) v F
 11 rows in set 
 ```
 
-如下示例为生成 100 万个符合正态分布的随机数值，耗时 1.5 秒。
+如下示例为生成 100 万个符合正态分布的随机数值，耗时约 1.5 秒。
 
 ```shell
 obclient> SELECT COUNT(NORMAL(0, 1, RANDOM())) v FROM TABLE(GENERATOR(1000000));
