--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/100.numeric-functions-of-oracle-mode/2900.randstr-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/100.numeric-functions-of-oracle-mode/2900.randstr-of-oracle-mode.md
@@ -19,7 +19,7 @@ RANDSTR(N, gen)
   * 常量，则每次调用 `RANDSTR()` 都会生成相同的随机串。
   * 返回整数值的随机函数，例如 `RANDOM()`。
   * 分布函数，例如均匀分布、zipf 分布、高斯分布等。
-* 随机串的生成算法：采用 LCG 算法生成 N 个随机值，据此选出 N 个字符组成随机串。所以当 N 很大时会消耗较多 CPU。例如下面生成了一个长度为 300 M 的随机串，耗时 1.7 秒。
+* 随机串的生成算法：采用 LCG 算法生成 N 个随机值，据此选出 N 个字符组成随机串。所以当 N 很大时会消耗较多 CPU。例如下面生成了一个长度为 300 亿个字符的随机串，耗时 1.7 秒。
   
   ```shell
   obclient> SELECT LENGTH(RANDSTR(300000000, 1)) FROM DUAL;;
