--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/20700.dbms-xplan-oracle/200.display-active-session-plan-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/20700.dbms-xplan-oracle/200.display-active-session-plan-of-oracle-mode.md
@@ -23,8 +23,8 @@ return DISPLAY_ACTIVE_SESSION_PLAN;
 
 | 参数 | 说明 |
 | --- | --- |
-| session_id | 用户连接的session id，注意不是proxy session id，是server的session id。 |
-| format | 指定计划格式信息，可选参数如下：<ul><li>`'BASIC'`：展示少量信息，例如算子 ID、算子名称、算子备注信息、表达式信息。</li><li> `'TYPICAL'`：展示基础信息，例如算子 ID、算子名称、算子备注信息、优化器估计的输出行数、优化器估计的执行时间，表达式信息。如果该计划执行过，还会展示计划第一次执行真实反馈信息，例如真实行数，开销等等。</li><li> `'ALL'`：展示丰富的计划信息，例如算子 ID、算子名称、算子备注信息、优化器估计的输出行数、优化器估计的执行时间，表达式信息、生效的 Hint、Query Block Name Trace 信息、Outline 信息、基表优化信息、常量参数化信息、约束信息、Plan Note 等。</li><li> `'ADVANCED'`：展示丰富的计划信息，计划信息与 'ALL' 参数一致，除此之外还为复杂的计划展示树状结构信息。</li></ul> |
+| session_id | 用户连接的session id。需要注意不是 Proxy Session ID，是 OBServer 节点的 Session ID。 |
+| format | 指定计划格式信息，可选参数如下：<ul><li>`'BASIC'`：展示少量信息，例如算子 ID、算子名称、算子备注信息、表达式信息。</li><li> `'TYPICAL'`：展示基础信息，例如算子 ID、算子名称、算子备注信息、优化器估计的输出行数、优化器估计的执行时间，表达式信息。如果该计划执行过，还会展示计划第一次执行真实反馈信息，例如真实行数，CPU 开销及 IO 开销等等。</li><li> `'ALL'`：展示丰富的计划信息，例如算子 ID、算子名称、算子备注信息、优化器估计的输出行数、优化器估计的执行时间，表达式信息、生效的 Hint、Query Block Name 相关的 Trace 信息、Outline 信息、基表优化信息、常量参数化信息、约束信息、Plan Note 等。</li><li> `'ADVANCED'`：展示丰富的计划信息，计划信息与 `'ALL'` 参数一致，除此之外还为复杂的计划展示树状结构信息。</li></ul> |
 | svr_ip | 计划所在的节点 IP，默认是 Session 连接的节点 IP。|
 | svr_port | 计划所在的节点端口号，默认是 Session 连接的节点端口号。|
 
