--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/100.numeric-functions-of-oracle-mode/2800.random-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/100.numeric-functions-of-oracle-mode/2800.random-of-oracle-mode.md
@@ -3,7 +3,7 @@
 ## 声明
 
 ```sql
-RANDDOM(seed)
+RANDOM(seed)
 ```
 
 ## 说明
@@ -11,11 +11,11 @@ RANDDOM(seed)
 该函数生成一个 64 位的整数伪随机值。
 
 * `seed` 为整数类型，不同 `seed` 可以生成不同的随机数值序列。
-* `RANDDOM()` 使用了 MT19937 伪随机数生成算法，其随机空间非常大，生成 2<sup>19937</sup> - 1 个随机元素后才会重复生成相同序列。
+* `RANDOM()` 使用了 MT19937 伪随机数生成算法，其随机空间非常大，生成 2<sup>19937</sup> - 1 个随机元素后才会重复生成相同序列。
 
 ## 示例
 
-如下示例为使用 `RANDDOM()` 生成随机数。
+如下示例为使用 `RANDOM()` 生成随机数。
 
 ```shell
 obclient> SELECT RANDOM(4) FROM TABLE(GENERATOR(3));
@@ -29,7 +29,7 @@ obclient> SELECT RANDOM(4) FROM TABLE(GENERATOR(3));
 3 rows in set 
 ```
 
-如下示例为将 `RANDDOM()` 的结果作为分布函数的随机输入。
+如下示例为将 `RANDOM()` 的结果作为分布函数的随机输入。
 
 ```shell
 obclient> SELECT UNIFORM(1, 100, RANDOM()) FROM TABLE(GENERATOR(4));
@@ -44,7 +44,7 @@ obclient> SELECT UNIFORM(1, 100, RANDOM()) FROM TABLE(GENERATOR(4));
 4 rows in set
 ```
 
-如下示例为特殊场景，当 `RANDDOM()` 参数输入为变量时，每次都会重新计算 `seed`。
+如下示例为特殊场景，当 `RANDOM()` 参数输入为变量时，每次都会重新计算 `seed`。
 
 ```shell
 obclient> SELECT * FROM t1;
