--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/1300.xml-functions-of-oracle-mode/300.querying-xmltype-data-functions-of-oracle-mode/300.xmlserialize-function-of-oracle-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/500.functions-of-oracle-mode/200.single-row-functions-of-oracle-mode/1300.xml-functions-of-oracle-mode/300.querying-xmltype-data-functions-of-oracle-mode/300.xmlserialize-function-of-oracle-mode.md
@@ -6,7 +6,7 @@
 
 ## 语法
 
-```shell
+```sql
 XMLSERIALIZE
   ( { DOCUMENT | CONTENT } value_expr [ AS datatype ]
     [ ENCODING xml_encoding_spec ]
@@ -21,11 +21,11 @@ XMLSERIALIZE
 | 字段 | 说明 |
 | --- | --- |
 | DOCUMENT | 指定解析的内容，需符合 XML Document 规范。 |
-| CONTENT | 指定解析的内容必须为一个有效的 XML 片段，但不一定合法。 |
+| CONTENT | 指定解析的内容必须为一个有效的 XML 片段。 |
 | AS datatype | 指定返回的类型，可以定义为 `VARCHAR`、`VARCHAR2`、`BLOB` 或 `CLOB`，默认为 `CLOB`。如果返回类型是 `BLOB`，可以指定`ENCODING`。 |
 | ENCODING | 使用指定的编码。 |
 | VERSION | 指定版本。 |
-| NO INDENT ELEMENT  | 指定层级之间不换行，不缩进。 |
+| NO INDENT ELEMENT  | 指定 `ELEMENT` 层级之间不换行，不缩进。 |
 | INDENT SIZE  | 设置缩进空格数量。如果设置为 0，表示 `ELEMENT` 层级之间只换行，不缩进，默认值为 2。 |
 | HIDE &#124; SHOW DEFAULTS | 是否显示 XML Schema 所定义的默认值。 |
 
