--- a/zh-CN/600.manage/400.high-availability/400.arbitration-high-availability/400.modify-the-degradation-timeout.md
+++ b/zh-CN/600.manage/400.high-availability/400.arbitration-high-availability/400.modify-the-degradation-timeout.md
@@ -67,7 +67,13 @@
      ALTER SYSTEM SET arbitration_timeout = '10s' TENANT = 'tenant_name';
      ```
 
-   * `sys` 租户修改所有租户的日志流降级控制时间
+   * `sys` 租户修改所有用户租户（不含 `sys` 租户和 Meta 租户）的日志流降级控制时间
+
+     ```sql
+     ALTER SYSTEM SET arbitration_timeout = '10s' TENANT = all_user;
+     ```
+
+     或者
 
      ```sql
      ALTER SYSTEM SET arbitration_timeout = '10s' TENANT = all;
