--- a/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/200.preparation-before-log-archive.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/200.preparation-before-log-archive.md
@@ -25,10 +25,16 @@
      ALTER SYSTEM SET log_archive_concurrency = 10 TENANT = mysql_tenant;
      ```
 
-   * `sys` 租户调整所有租户的日志归档速度
+   * `sys` 租户调整所有用户租户（不含 `sys` 租户和 Meta 租户）的日志归档速度
 
      ```sql
-     ALTER SYSTEM SET log_archive_concurrency = 10 TENANT = ALL;
+     ALTER SYSTEM SET log_archive_concurrency = 10 TENANT = all_user;
+     ```
+
+     或者
+
+     ```sql
+     ALTER SYSTEM SET log_archive_concurrency = 10 TENANT = all;
      ```
 
    * 用户租户调整本租户的日志归档速度
