--- a/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/400.close-the-log-archive-mode.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/400.close-the-log-archive-mode.md
@@ -14,15 +14,15 @@
 
 2. 执行以下语句，关闭归档模式。
 
-   * 关闭集群中所有租户的归档模式
+   * 关闭集群中所有用户租户（不含 `sys` 租户和 Meta 租户）的归档模式
 
-     该方式会关闭集群中所有租户的归档模式。
+     该方式会关闭集群中所有用户租户的归档模式。
 
      ```shell
      obclient [(none)]> ALTER SYSTEM NOARCHIVELOG [TENANT = ALL];
      ```
 
-     命令执行成功后，在本示例中， `mysql_tenant` 和 `oracle_tenant` 都会关闭归档模式。可以通过 `sys` 租户下的 `oceanbase.DBA_OB_TENANTS` 视图查看集群中所有租户的归档模式。
+     命令执行成功后，在本示例中， `mysql_tenant` 和 `oracle_tenant` 都会关闭归档模式。可以通过 `sys` 租户下的 `oceanbase.DBA_OB_TENANTS` 视图查看集群中所有用户租户的归档模式。
 
      ```shell
      obclient [(none)]> SELECT TENANT_NAME, LOG_MODE FROM oceanbase.DBA_OB_TENANTS WHERE TENANT_TYPE='USER'\G
