--- a/zh-CN/700.reference/200.system-management/500.manage-data-storage/200.merge-management/400.manually-trigger-a-merge.md
+++ b/zh-CN/700.reference/200.system-management/500.manage-data-storage/200.merge-management/400.manually-trigger-a-merge.md
@@ -37,7 +37,7 @@
    SQL 语句如下：
 
    ```sql
-   obclient> ALTER SYSTEM MAJOR FREEZE TENANT [=] ALL | tenant_name [, tenant_name ...];
+   obclient> ALTER SYSTEM MAJOR FREEZE TENANT [=] all_user | all | all_meta | tenant_name [, tenant_name ...];
    ```
 
    其中，`[=]` 表示等号（=）为可选。
@@ -50,13 +50,25 @@
       obclient> ALTER SYSTEM MAJOR FREEZE TENANT;
       ```
    
-   * 对所有租户发起合并
+   * 系统租户对所有用户租户发起合并
 
       ```sql
-      obclient> ALTER SYSTEM MAJOR FREEZE TENANT = ALL;
+      obclient> ALTER SYSTEM MAJOR FREEZE TENANT = all_user;
       ```
 
-   * 对指定租户发起合并
+      或者
+
+      ```sql
+      obclient> ALTER SYSTEM MAJOR FREEZE TENANT = all;
+      ```
+   
+   * 系统租户对所有 Meta 租户发起合并
+
+      ```sql
+      obclient> ALTER SYSTEM MAJOR FREEZE TENANT = all_meta;
+      ```
+
+   * 系统租户对指定租户发起合并
 
       ```sql
       obclient> ALTER SYSTEM MAJOR FREEZE TENANT = tenant1,tenant2;
