--- a/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/800.tenant-scale-in-and-out/300.adjust-unit-number.md
+++ b/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/800.tenant-scale-in-and-out/300.adjust-unit-number.md
@@ -34,7 +34,7 @@
      ALTER SYSTEM SET enable_rebalance = true TENANT = 'oracle';
      ```
   
-  * 系统租户开启所有用户租户其租户内的负载均衡
+  * 系统租户开启所有用户租户（不含 `sys` 租户和 Meta 租户）租户内的负载均衡
 
      ```sql
      ALTER SYSTEM SET enable_rebalance = true TENANT = all_user;
