--- a/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/300.open-the-log-archive-mode.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/300.log-archive/300.open-the-log-archive-mode.md
@@ -14,20 +14,20 @@
 
 2. 执行以下语句，开启归档模式。
 
-   * 开启集群中所有租户的归档模式
+   * 开启集群中所有用户租户（不含 `sys` 租户和 Meta 租户）的归档模式
 
-     该方式会将当前集群中的所有租户开启归档模式。
+     该方式会将当前集群中的所有用户租户开启归档模式。
 
      <main id="notice" type='explain'>
      <h4>注意</h4>
-     <p>该操作仅对当前集群中的所有租户生效，对于该操作之后所创建的租户，系统不会自动开启归档模式。</p>
+     <p>该操作仅对当前集群中的所有用户租户生效，对于该操作之后所创建的用户租户，系统不会自动开启归档模式。</p>
      </main>
 
      ```shell
      obclient [(none)]> ALTER SYSTEM ARCHIVELOG [TENANT = ALL];
      ```
 
-     命令执行成功后，在本示例中， `mysql_tenant` 和 `oracle_tenant` 都会开启归档模式。可以在 `sys` 租户下的 `oceanbase.DBA_OB_TENANTS` 视图中查看集群中所有租户的归档模式。
+     命令执行成功后，在本示例中， `mysql_tenant` 和 `oracle_tenant` 都会开启归档模式。可以在 `sys` 租户下的 `oceanbase.DBA_OB_TENANTS` 视图中查看集群中所有用户租户的归档模式。
 
      示例如下：
 
