--- a/zh-CN/700.reference/200.system-management/500.manage-data-storage/100.dump-management/300.trigger-dump-manually.md
+++ b/zh-CN/700.reference/200.system-management/500.manage-data-storage/100.dump-management/300.trigger-dump-manually.md
@@ -10,29 +10,43 @@
 
    * 租户级别的转储
 
-      可以对所有租户、指定的一个或多个租户进行转储，SQL 语句如下。
+      可以对指定的一个或多个租户进行转储，SQL 语句如下。
 
       ```sql
-      obclient> ALTER SYSTEM MINOR FREEZE TENANT [=] ALL | tenant_name [, tenant_name ...];
+      obclient> ALTER SYSTEM MINOR FREEZE TENANT [=] all | tenant_name [, tenant_name ...];
       ```
 
-      示例：
+      示例如下：
 
-      ```sql
-      obclient> ALTER SYSTEM MINOR FREEZE TENANT =ALL;
-      Query OK, 0 rows affected
+      * 对本租户发起转储
 
-      obclient> ALTER SYSTEM MINOR FREEZE tenant = tenant1;
-      Query OK, 0 rows affected
+          ```sql
+          obclient> ALTER SYSTEM MINOR FREEZE;
+          ```
+      
+      * 对所有用户租户发起转储
 
-      obclient> ALTER SYSTEM MINOR FREEZE TENANT =tenant1,tenant2;
-      Query OK, 0 rows affected
-      ```
+          ```sql
+          obclient> ALTER SYSTEM MINOR FREEZE TENANT = all_user;
+          ```
 
-      <main id="notice" type='explain'>
-       <h4>说明</h4>
-       <p>如果不指定租户，执行 <code>ALTER SYSTEM MINOR FREEZE</code> 语句，则表示对 <code>sys</code> 租户本身进行转储。</p>
-      </main>
+          或者
+
+          ```sql
+          obclient> ALTER SYSTEM MINOR FREEZE TENANT = all;
+          ```
+      
+      * 对所有 Meta 租户发起转储
+
+          ```sql
+          obclient> ALTER SYSTEM MINOR FREEZE TENANT = all_meta;
+          ```
+
+      * 对指定租户发起转储
+
+          ```sql
+          obclient> ALTER SYSTEM MINOR FREEZE TENANT = tenant1;
+          ```
 
    * Zone 级别的转储
 
