--- a/zh-CN/700.reference/200.system-management/700.memory-management/500.memory-management-within-a-tenant.md
+++ b/zh-CN/700.reference/200.system-management/700.memory-management/500.memory-management-within-a-tenant.md
@@ -8,7 +8,7 @@
 
 其中：
 
-* sys_unit_config.memory_size 的值由资源规格 `sys_unit_config` 中的 `memory_size` 决定。`sys_unit_config` 是系统租户默认的资源规格，其 `memory_size` 默认值的计算公式为 `min((memory_limit - system_memory)/4, 16G)`。由于系统租户也是一个正常的租户，故可以通过 `ALTER RESOURCE` 语句修改 `sys_unit_config` 中 `MEMORY_SIZE` 的值。
+* sys_unit_config.memory_size 的值由资源规格 `sys_unit_config` 中的 `memory_size` 决定。`sys_unit_config` 是系统租户默认的资源规格，其默认的内存资源为最小资源。由于系统租户也是一个正常的租户，故可以通过 `ALTER RESOURCE` 语句修改 `sys_unit_config` 中 `memory_size` 的值。
 
 * hidden_sys_memory 的值由隐藏配置项 `_hidden_sys_tenant_memory` 控制。隐藏配置项 `_hidden_sys_tenant_memory` 的默认值为 0，表示系统会按照一定的规则进行自适应分配 hidden_sys_memory 的值。不建议修改隐藏配置项 `_hidden_sys_tenant_memory` 的值。
 
