--- a/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/800.tenant-scale-in-and-out/300.adjust-unit-number.md
+++ b/zh-CN/600.manage/200.tenant-management/600.common-tenant-operations/800.tenant-scale-in-and-out/300.adjust-unit-number.md
@@ -20,13 +20,13 @@
 
   系统租户或用户租户开启租户内的负载均衡的语句如下：
 
-  * 系统租户开启指定租户内的负载均衡
+  * 系统租户开启指定租户的租户内负载均衡
 
      ```sql
      ALTER SYSTEM SET enable_rebalance = true TENANT = 'tenant_name';
      ```
 
-     该语句仅将用户租户下配置项 `enable_rebalance` 的值设置为 `true`。
+     该语句仅将指定租户下配置项 `enable_rebalance` 的值设置为 `true`。
 
      示例：
 
@@ -34,7 +34,7 @@
      ALTER SYSTEM SET enable_rebalance = true TENANT = 'oracle';
      ```
   
-  * 系统租户开启所有用户租户（不含 `sys` 租户和 Meta 租户）租户内的负载均衡
+  * 系统租户开启所有用户租户（不含 `sys` 租户和 Meta 租户）的租户内负载均衡
 
      ```sql
      ALTER SYSTEM SET enable_rebalance = true TENANT = all_user;
@@ -46,9 +46,9 @@
      ALTER SYSTEM SET enable_rebalance = true TENANT = all;
      ```
 
-     该语句表示用户租户下配置项 `enable_rebalance` 的值均为 `true`。
+     该语句表示所有用户租户下配置项 `enable_rebalance` 的值均为 `true`。
 
-  * 用户租户开启本租户内的负载均衡
+  * 用户租户开启本租户的租户内负载均衡
 
     ```sql
     ALTER SYSTEM SET enable_rebalance = true;
