--- a/zh-CN/700.reference/200.system-management/500.manage-data-storage/100.dump-management/300.trigger-dump-manually.md
+++ b/zh-CN/700.reference/200.system-management/500.manage-data-storage/100.dump-management/300.trigger-dump-manually.md
@@ -18,13 +18,13 @@
 
       示例如下：
 
-      * 对本租户发起转储
+      * 系统租户对本租户发起转储
 
           ```sql
           obclient> ALTER SYSTEM MINOR FREEZE;
           ```
       
-      * 对所有用户租户发起转储
+      * 系统租户对所有用户租户发起转储
 
           ```sql
           obclient> ALTER SYSTEM MINOR FREEZE TENANT = all_user;
@@ -36,13 +36,13 @@
           obclient> ALTER SYSTEM MINOR FREEZE TENANT = all;
           ```
       
-      * 对所有 Meta 租户发起转储
+      * 系统租户对所有 Meta 租户发起转储
 
           ```sql
           obclient> ALTER SYSTEM MINOR FREEZE TENANT = all_meta;
           ```
 
-      * 对指定租户发起转储
+      * 租户租户对指定租户发起转储
 
           ```sql
           obclient> ALTER SYSTEM MINOR FREEZE TENANT = tenant1;
