--- a/zh-CN/700.reference/300.database-object-management/200.manage-object-of-oracle-mode/300.manage-table-groups-of-oracle-mode/600.manage-tables-within-a-table-group-of-oracle-mode.md
+++ b/zh-CN/700.reference/300.database-object-management/200.manage-object-of-oracle-mode/300.manage-table-groups-of-oracle-mode/600.manage-tables-within-a-table-group-of-oracle-mode.md
@@ -32,7 +32,7 @@
 
 2. 开启租户内的数据均衡。
 
-   * 系统租户开启指定租户内的数据均衡
+   * 系统租户开启指定租户的租户内数据均衡
 
      ```sql
      ALTER SYSTEM SET enable_rebalance = true TENANT = 'tenant_name';
@@ -46,7 +46,7 @@
      ALTER SYSTEM SET enable_rebalance = true TENANT = 'oracle';
      ```
 
-   * 系统租户开启所有用户租户其租户内的数据均衡
+   * 系统租户开启所有用户租户的租户内数据均衡
 
      ```sql
      ALTER SYSTEM SET enable_rebalance = true TENANT = all_user;
@@ -60,7 +60,7 @@
 
      该语句表示用户租户下配置项 `enable_rebalance` 的值均为 `true`。
 
-   * 用户租户开启本租户内的数据均衡
+   * 用户租户开启本租户的租户内数据均衡
 
      ```sql
      ALTER SYSTEM SET enable_rebalance = true;
