v410-update-introduction-quickstart-deploy-migration

--- a/en-US/100.learn-more-about-oceanbase/300.system-architecture.md
+++ b/en-US/100.learn-more-about-oceanbase/300.system-architecture.md
@@ -99,16 +99,17 @@ The SQL layer can divide an execution plan into multiple parts, which are execut
 
 ## Access layer
 
-OceanBase Database Proxy (ODP) serves as the access layer of OceanBase Database. ODP forwards user queries to the appropriate OceanBase Database instance for processing.
+OceanBase Database Proxy (ODP) serves as the access layer of OceanBase Database. It forwards user requests to the appropriate OceanBase Database instance for processing.
 
-ODP is independent of the OceanBase Database instance and runs as an independent process. It listens to network ports, is compatible with MySQL protocols, and supports the direct connection to OceanBase Database from MySQL-driven applications.
+ODP works as an independent process instance and operates separately from the deployment of OceanBase Database instances. It listens on network ports, ensuring compatibility with the MySQL network protocol. This allows applications that use MySQL drivers to directly connect to OceanBase Database.
 
-ODP automatically discovers the data distribution information of an OceanBase cluster. It tries to identify the data to be accessed when it receives each SQL statement, and directly forwards the statement to the OceanBase Database instance of the server where the data exists.
+ODP can automatically discover the data distribution information of the OceanBase cluster. For each SQL statement, ODP strives to recognize the data the statement will access, and directly forwards the statement to the corresponding OceanBase Database instance running on the server where the data resides.
 
 ODP can be deployed on each application server that needs to access OceanBase Database, or on an OBServer node in each zone. In the first deployment mode, an application directly connects to the ODP deployed on the same server, and all queries are routed by the ODP to an appropriate OBServer node. In the second deployment mode, a load balancing service is required to aggregate multiple ODPs and provide a unified service IP address to applications.
+
 
 <!-- ## More information
 
 For more information about the overall architecture of OceanBase Database, see the following topic:
 
-* [Overall architecture of OceanBase Database](../7.reference/1.oceanbase-database-concepts/1.architecture-of-oceanbase.md) -->
+* [Overall architecture of OceanBase Database](../700.reference/100.oceanbase-database-concepts/100.architecture-of-oceanbase.md) 链接待放开 -->
