--- a/en-US/200.quickstart/300.create-sample-application-of-oracle-mode/200.java-application-of-oracle-model.md
+++ b/en-US/200.quickstart/300.create-sample-application-of-oracle-mode/200.java-application-of-oracle-model.md
@@ -3,7 +3,7 @@
 This topic describes how to build a Java application with OceanBase Database and OceanBase Connector/J.
 
   <main id="notice" >
-    <h4>Note</h4>
+    <h4>Applicability</h4>
     <p>This topic applies only to OceanBase Database Enterprise Edition. OceanBase Database Community Edition provides only MySQL mode.</p>
   </main>
 
@@ -11,7 +11,7 @@ This topic describes how to build a Java application with OceanBase Database and
 
 * A basic database development environment is deployed.
 
-* You have installed or upgraded to JDK 8 on your computer.
+* The Java environment on your computer is Java JDK 8 or later.
 
 * You have obtained the installation package of OceanBase Connector/J. 
   
@@ -24,7 +24,7 @@ This topic describes how to build a Java application with OceanBase Database and
 Obtain a database connection string from a database deployment engineer or administrator. For example:
 
 ```sql
-obclient  -h100.88.xx.xx -usys@oracle -p***1** -P2881
+obclient  -h100.88.xx.xx -usys@oracle -p****** -P2881
 ```
 
 The database connection string contains parameters required for accessing OceanBase Database. Before you create an application, you can log on to OceanBase Database by using the database connection string, to verify that the parameters are correct.
@@ -69,7 +69,7 @@ public class Test {
         try {
 
             Class.forName("com.oceanbase.jdbc.Driver");
-            Connection connection = DriverManager.getConnection("jdbc:oceanbase://172.30.xx.xx:2881/?pool=false&user=s**@oracle&password=***1**");
+            Connection connection = DriverManager.getConnection("jdbc:oceanbase://172.30.xx.xx:2881/?pool=false&user=s**@oracle&password=******");
             System.out.println(connection.getAutoCommit());
             Statement sm = connection.createStatement();
             // Create a table named t_meta_form.
@@ -122,4 +122,4 @@ an,1
 
 ## More information
 
-For more information about how to use OceanBase Connector/J, see the [OceanBase Connector/J documentation](https://en.oceanbase.com/docs/enterprise-oceanbase-connector-j-en-10000000000859583).
+For more information about how to use OceanBase Connector/J, see the [OceanBase Connector/J documentation](https://en.oceanbase.com/docs/oceanbase-connector-j-en).
