--- a/en-US/500.data-migration/1100.bypass-import/200.use-load-data-statement-to-bypass-import-data.md
+++ b/en-US/500.data-migration/1100.bypass-import/200.use-load-data-statement-to-bypass-import-data.md
@@ -17,6 +17,7 @@ LOAD DATA /*+ direct(need_sort,max_error) parallel(N) */ INFILE 'file_name' ...
 
 For more information about the syntax of the `LOAD DATA` statement, see [LOAD DATA](../../700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/5900.load-data-of-mysql-mode.md).
 
+**Parameters:**
 
 | Parameter | Description |
 |------|------|
@@ -29,10 +30,10 @@ For more information about the syntax of the `LOAD DATA` statement, see [LOAD DA
 
 1. Log on to the server where the target OBServer node resides and create test data in the `/home/admin` directory.
 
-   <main id="notice" type='explain'>
+    <main id="notice" type='explain'>
     <h4>Note</h4>
     <p>In OceanBase Database, the <code>LOAD DATA</code> statement can load only local input files on OBServer nodes. Therefore, you must copy the to-be-imported files to an OBServer node before the import. </p>
-   </main>
+    </main>
 
    ```shell
    [xxx@xxx /home/admin]# ssh admin@10.10.10.1
@@ -62,17 +63,13 @@ For more information about the syntax of the `LOAD DATA` statement, see [LOAD DA
    2. Use the OBClient to directly connect to the `mysql001` tenant.
 
       ```shell
-      [root@ocp-deploy-obnorpm6-8457ccd77d-9g8pz admin]# obclient -h10.10.10.1 -P2881 -uroot@mysql001 -p******
-      -A
-      Welcome to the OceanBase.  Commands end with ; or \g.
-      Your OceanBase connection id is 3221701485
-      Server version: OceanBase 4.1.0.0 (r100000682023020119-c760cbb1023d73a2647f28add283646b1569418f) (Built Feb  1 2023 20:07:36)
+      obclient -S /home/admin/oceanbase/run/sql.sock -uroot@mysql001 -p******
+      ```
 
-      Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
+      Alternatively, execute the following command to connect to the tenant `mysql001` via a local Unix Socket connection.
 
-      Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
-
-      obclient [(none)]>
+      ```shell
+      obclient -S /home/admin/oceanbase/run/sql.sock -uroot@mysql001 -p******
       ```
 
    3. Set the import path to `/home/admin`.
@@ -82,7 +79,7 @@ For more information about the syntax of the `LOAD DATA` statement, see [LOAD DA
       Query OK, 0 rows affected
       ```
 
-3. Use the `LOAD /*+ APPEND */ DATA` statement to import data.
+3. After you reconnect to the database, execute the `LOAD /*+ APPEND */ DATA` statement to import data.
 
    ```shell
    obclient [test]> CREATE TABLE tbl1(col1 INT PRIMARY KEY,col2 INT);
