--- a/en-US/100.learn-more-about-oceanbase/400.compatibility-with-oracle/300.built-in-functions.md
+++ b/en-US/100.learn-more-about-oceanbase/400.compatibility-with-oracle/300.built-in-functions.md
@@ -6,91 +6,92 @@ Oracle Database supports 257 built-in functions and OceanBase Database supports 
 
 ## Numeric functions
 
-| No. | Oracle function | Supported in OceanBase Database |
+| No. | Oracle function  | Supported in OceanBase Database |
 |----|----------------|-------------------|
-| 1 | ABS | Yes |
-| 2 | ACOS | Yes |
-| 3 | ASIN | Yes |
-| 4 | ATAN | Yes |
-| 5 | ATAN2 | Yes |
-| 6 | BITAND | Yes |
-| 7 | CEIL | Yes |
-| 8 | COS | Yes |
-| 9 | COSH | Yes |
-| 10 | EXP | Yes |
-| 11 | FLOOR | Yes |
-| 12 | LN | Yes |
-| 13 | LOG | Yes |
-| 14 | MOD | Yes |
-| 15 | NANVL | Yes |
-| 16 | POWER | Yes |
-| 17 | REMAINDER | Yes |
-| 18 | ROUND (number) | Yes |
-| 19 | SIGN | Yes |
-| 20 | SIN | Yes |
-| 21 | SINH | Yes |
-| 22 | SQRT | Yes |
-| 23 | TAN | Yes |
-| 24 | TANH | Yes |
-| 25 | TRUNC (number) | Yes |
-| 26 | WIDTH_BUCKET | Yes |
+| 1  | ABS            | Yes                |
+| 2  | ACOS           | Yes                |
+| 3  | ASIN           | Yes                |
+| 4  | ATAN           | Yes                |
+| 5  | ATAN2          | Yes                |
+| 6  | BITAND         | Yes                |
+| 7  | CEIL           | Yes                |
+| 8  | COS            | Yes                |
+| 9  | COSH           | Yes                |
+| 10 | EXP            | Yes                |
+| 11 | FLOOR          | Yes                |
+| 12 | LN             | Yes                |
+| 13 | LOG            | Yes                |
+| 14 | MOD            | Yes                |
+| 15 | NANVL          | Yes                |
+| 16 | POWER          | Yes                |
+| 17 | REMAINDER      | Yes                |
+| 18 | ROUND (number) | Yes                |
+| 19 | SIGN           | Yes                |
+| 20 | SIN            | Yes                |
+| 21 | SINH           | Yes                |
+| 22 | SQRT           | Yes                |
+| 23 | TAN            | Yes                |
+| 24 | TANH           | Yes                |
+| 25 | TRUNC (number) | Yes                |
+| 26 | WIDTH_BUCKET   | Yes                |
 
 ## String functions
 
-| No. | Oracle function | Supported in OceanBase Database |
+| No. |    Oracle function    | Supported in OceanBase Database |
 |----|---------------------|-------------------|
-| 1 | CHR | Yes |
-| 2 | CONCAT | Yes |
-| 3 | INITCAP | Yes |
-| 4 | LOWER | Yes |
-| 5 | LPAD | Yes |
-| 6 | LTRIM | Yes |
-| 7 | NLS_LOWER | Yes |
-| 8 | NLS_UPPER | Yes |
-| 9 | REGEXP_REPLACE | Yes |
-| 10 | REGEXP_SUBSTR | Yes |
-| 11 | REPLACE | Yes |
-| 12 | RPAD | Yes |
-| 13 | RTRIM | Yes |
-| 14 | SUBSTR | Yes |
-| 15 | TRANSLATE | Yes |
-| 16 | TRANSLATE ... USING | Yes |
-| 17 | TRIM | Yes |
-| 18 | UPPER | Yes |
-| 19 | ASCII | Yes |
-| 20 | INSTR | Yes |
-| 21 | LENGTH | Yes |
-| 22 | REGEXP_COUNT | Yes |
-| 23 | REGEXP_INSTR | Yes |
+| 1  | CHR                 | Yes                |
+| 2  | CONCAT              | Yes                |
+| 3  | INITCAP             | Yes                |
+| 4  | LOWER               | Yes                |
+| 5  | LPAD                | Yes                |
+| 6  | LTRIM               | Yes                |
+| 7  | NLS_LOWER           | Yes                |
+| 8  | NLS_UPPER           | Yes                |
+| 9  | REGEXP_REPLACE      | Yes                |
+| 10 | REGEXP_SUBSTR       | Yes                |
+| 11 | REPLACE             | Yes                |
+| 12 | RPAD                | Yes                |
+| 13 | RTRIM               | Yes                |
+| 14 | SUBSTR              | Yes                |
+| 15 | TRANSLATE           | Yes                |
+| 16 | TRANSLATE ... USING | Yes                |
+| 17 | TRIM                | Yes                |
+| 18 | UPPER               | Yes                |
+| 19 | ASCII               | Yes                |
+| 20 | INSTR               | Yes                |
+| 21 | LENGTH              | Yes                |
+| 22 | REGEXP_COUNT        | Yes                |
+| 23 | REGEXP_INSTR        | Yes                |
 
 ## Date functions
 
-| No. | Oracle function | Supported in OceanBase Database |
+
+| No. |   Oracle function    | Supported in OceanBase Database |
 |----|--------------------|-------------------|
-| 1 | ADD_MONTHS | Yes |
-| 2 | CURRENT_DATE | Yes |
-| 3 | CURRENT_TIMESTAMP | Yes |
-| 4 | DBTIMEZONE | Yes |
-| 5 | EXTRACT (datetime) | Yes |
-| 6 | FROM_TZ | Yes |
-| 7 | LAST_DAY | Yes |
-| 8 | LOCALTIMESTAMP | Yes |
-| 9 | MONTHS_BETWEEN | Yes |
-| 10 | NEXT_DAY | Yes |
-| 11 | NUMTODSINTERVAL | Yes |
-| 12 | NUMTOYMINTERVAL | Yes |
-| 13 | ROUND (date) | Yes |
-| 14 | SESSIONTIMEZONE | Yes |
-| 15 | SYS_EXTRACT_UTC | Yes |
-| 16 | SYSDATE | Yes |
-| 17 | SYSTIMESTAMP | Yes |
-| 18 | TO_CHAR (datetime) | Yes |
-| 19 | TO_DSINTERVAL | Yes |
-| 20 | TO_TIMESTAMP | Yes |
-| 21 | TO_TIMESTAMP_TZ | Yes |
-| 22 | TO_YMINTERVAL | Yes |
-| 23 | TRUNC (date) | Yes |
-| 24 | TZ_OFFSET | Yes |
+| 1  | ADD_MONTHS         | Yes                |
+| 2  | CURRENT_DATE       | Yes                |
+| 3  | CURRENT_TIMESTAMP  | Yes                |
+| 4  | DBTIMEZONE         | Yes                |
+| 5  | EXTRACT (datetime) | Yes                |
+| 6  | FROM_TZ            | Yes                |
+| 7  | LAST_DAY           | Yes                |
+| 8  | LOCALTIMESTAMP     | Yes                |
+| 9  | MONTHS_BETWEEN     | Yes                |
+| 10 | NEXT_DAY           | Yes                |
+| 11 | NUMTODSINTERVAL    | Yes                |
+| 12 | NUMTOYMINTERVAL    | Yes                |
+| 13 | ROUND (date)       | Yes                |
+| 14 | SESSIONTIMEZONE    | Yes                |
+| 15 | SYS_EXTRACT_UTC    | Yes                |
+| 16 | SYSDATE            | Yes                |
+| 17 | SYSTIMESTAMP       | Yes                |
+| 18 | TO_CHAR (datetime) | Yes                |
+| 19 | TO_DSINTERVAL      | Yes                |
+| 20 | TO_TIMESTAMP       | Yes                |
+| 21 | TO_TIMESTAMP_TZ    | Yes                |
+| 22 | TO_YMINTERVAL      | Yes                |
+| 23 | TRUNC (date)       | Yes                |
+| 24 | TZ_OFFSET          | Yes                |
 
 ## General comparison functions
 
@@ -172,34 +173,34 @@ Oracle Database supports 257 built-in functions and OceanBase Database supports 
 
 | No. | Oracle function | Supported in OceanBase Database |
 |----|------------------------------|-------------------|
-| 1 | APPROX_COUNT_DISTINCT | Yes |
-| 2 | AVG * | Yes |
-| 3 | CORR * | Yes |
-| 4 | COUNT * | Yes |
-| 5 | COVAR_POP * | Yes |
-| 6 | COVAR_SAMP * | Yes |
-| 7 | CUME_DIST * | Yes |
-| 8 | DENSE_RANK * | Yes |
-| 9 | GROUPING | Yes |
-| 10 | KEEP * | Yes |
-| 11 | LISTAGG * | Yes |
-| 12 | MAX * | Yes |
-| 13 | MIN * | Yes |
-| 14 | MEDIAN * | Yes |
-| 15 | PERCENT_RANK * | Yes |
-| 16 | PERCENTILE_CONT * | Yes |
-| 17 | PERCENTILE_DISC * | Yes |
-| 18 | RANK * | Yes |
-| 19 | REGR_ (Linear Regression) * | Yes |
-| 20 | ROLLUP | Yes |
-| 21 | STDDEV * | Yes |
-| 22 | STDDEV_POP * | Yes |
-| 23 | STDDEV_SAMP * | Yes |
-| 24 | SUM * | Yes |
-| 25 | VAR_POP * | Yes |
-| 26 | VAR_SAMP * | Yes |
-| 27 | VARIANCE * | Yes |
-| 28 | WMSYS.WM_CONCAT/WM_CONCAT * | Yes |
+| 1  | APPROX_COUNT_DISTINCT        | Yes                |
+| 2  | AVG \*                       | Yes                |
+| 3  | CORR \*                      | Yes                |
+| 4  | COUNT \*                     | Yes                |
+| 5  | COVAR_POP \*                 | Yes                |
+| 6  | COVAR_SAMP \*                | Yes                |
+| 7  | CUME_DIST \*                 | Yes                |
+| 8  | DENSE_RANK \*                | Yes                |
+| 9  | GROUPING                     | Yes                |
+| 10 | KEEP \*                      | Yes                |
+| 11 | LISTAGG \*                   | Yes                |
+| 12 | MAX \*                       | Yes                |
+| 13 | MIN \*                       | Yes                |
+| 14 | MEDIAN \*                    | Yes                |
+| 15 | PERCENT_RANK \*              | Yes                |
+| 16 | PERCENTILE_CONT \*           | Yes                |
+| 17 | PERCENTILE_DISC \*           | Yes                |
+| 18 | RANK \*                      | Yes                |
+| 19 | REGR_ (Linear Regression) \* | Yes                |
+| 20 | ROLLUP                       | Yes                |
+| 21 | STDDEV \*                    | Yes                |
+| 22 | STDDEV_POP \*                | Yes                |
+| 23 | STDDEV_SAMP \*               | Yes                |
+| 24 | SUM \*                       | Yes                |
+| 25 | VAR_POP \*                   | Yes                |
+| 26 | VAR_SAMP \*                  | Yes                |
+| 27 | VARIANCE \*                  | Yes                |
+| 28 | WMSYS.WM_CONCAT/WM_CONCAT \* | Yes                |
 
 <main id="notice" type='explain'>
   <h4>Note</h4>
