--- a/en-US/200.quickstart/200.get-started-with-oceanbase-sql/100.before-you-start.md
+++ b/en-US/200.quickstart/200.get-started-with-oceanbase-sql/100.before-you-start.md
@@ -1,6 +1,6 @@
 # Before you begin
 
-To help you better get started with OceanBase Database, learn about the following two key concepts first: **memory** and **timeout period**.
+To better get started with OceanBase Database, learn about the following two key concepts first: **memory** and **timeout period**.
 
 ## Memory
 
@@ -63,7 +63,7 @@ When the total memory in the environment is sufficient, you can expand the memor
    ```
 
   <main id="notice" type='notice'>
-    <h4>Note</h4>
+    <h4>Notice</h4>
     <p>In the current version, only the CPU- and memory-related parameters take effect, and other I/O parameters such as IOPS do not take effect.</p>
   </main>
 
@@ -76,7 +76,7 @@ You can specify the following parameters to adjust the percentage of MemTables i
 
 When the memory is insufficient, you can increase the value of the `memstore_limit_percentage` parameter and lower the value of the `freeze_trigger_percentage` parameter to temporarily expand the memory and promptly free up the memory space.
 
-To increase the value of `memstore_limit_percentage` and decrease the value of `freeze_trigger_percentage`, Log on to the sys tenant of the OceanBase cluster as the `root` user and modify the parameters as follows:
+To increase the value of `memstore_limit_percentage` and decrease the value of `freeze_trigger_percentage`, log on to the sys tenant of the OceanBase cluster as the `root` user and modify the parameters as follows:
 
 ```sql
 obclient> ALTER SYSTEM SET freeze_trigger_percentage = 20;
@@ -102,7 +102,7 @@ You can execute the `SHOW VARIABLES LIKE '%timeout%';` statement to view the tim
 
 You can set the timeout period in the following ways:
 
-* Set the timeout period in the current session or globally. Sample code:
+* Set the timeout period in the current session or globally. For example:
 
    ```sql
    obclient> SET ob_query_timeout = 10000000;
@@ -112,13 +112,13 @@ You can set the timeout period in the following ways:
    Query OK, 0 rows affected
    ```
 
-* Set the timeout period in the JDBC connection string. Sample code:
+* Set the timeout period in the JDBC connection string. For example:
 
    ```html
    jdbc:oceanbase://10.1.0.0:1001/unittests?user=**u**@sys&password=***1**&sessionVariables = ob_query_timeout = 60000000000,ob_trx_timeout = 60000000000&xxxx
    ```
 
-* Add hints at the SQL statement level. Sample code:
+* Add hints at the SQL statement level. For example:
 
    ```sql
    SELECT /*+query_timeout(100000000)  */  c1 FROM t1;
@@ -129,4 +129,4 @@ You can set the timeout period in the following ways:
     <p>The added hints take effect only for the current SQL statement.</p>
    </main>
 
-For more information about database development and management, see the Develop and Manage chapters.
+For more information about database development and management, see the **Develop** and **Manage** chapters.
