--- a/en-US/200.quickstart/200.get-started-with-oceanbase-sql/200.basic-sql-operations-of-mysql-mode.md
+++ b/en-US/200.quickstart/200.get-started-with-oceanbase-sql/200.basic-sql-operations-of-mysql-mode.md
@@ -4,9 +4,9 @@ This topic describes the basic SQL operations in OceanBase Database in MySQL mod
 
 ## Create a database
 
-Use the `CREATE DATABASE` statement to create a database.
+You can execute the `CREATE DATABASE` statement to create a database.
 
-Example: Create a database named `db1`, set the character set to UTF8, and specify the read and write attributes.
+For example, create a database named `db1`, set the character set to UTF8, and specify the read and write attributes.
 
 ```sql
 obclient> CREATE DATABASE db1 DEFAULT CHARACTER SET UTF8 READ WRITE;
@@ -31,13 +31,13 @@ obclient> SHOW DATABASES;
 
 ## Table operations
 
-This section describes how to create, view, modify, and drop database tables. Tables serve as the fundamental data storage units in the OceanBase Database. They hold all the data that users can access. Each table is comprised of multiple rows, with each row containing various columns.
+This section describes how to create, view, modify, and drop database tables. Tables serve as the fundamental data storage units in OceanBase Database. They hold all the data that users can access. Each table is comprised of multiple rows, with each row containing various columns.
 
 ### Create a table
 
-Use the `CREATE TABLE` statement to create a table in a database.
+You can execute the `CREATE TABLE` statement to create a table in a database.
 
-Example: Create a table named `test` in the `db1` database.
+For example, create a table named `test` in the `db1` database.
 
 ```sql
 obclient> USE db1;
@@ -51,9 +51,9 @@ For more information about the `CREATE TABLE` statement, see [CREATE TABLE](../.
 
 ### View a table
 
-Use the `SHOW CREATE TABLE` statement to view table creation statements.
+You can execute the `SHOW CREATE TABLE` statement to view table creation statements.
 
-Examples:
+Here are some examples:
 
 * View the statement for creating the `test` table.
 
@@ -83,9 +83,9 @@ Examples:
 
 ### Modify a table
 
-Use the `ALTER TABLE` statement to modify the structure of an existing table, including modifying the table name and table attributes, adding columns, modifying the column name and attributes, and dropping columns.
+You can execute the `ALTER TABLE` statement to modify the structure of an existing table, including modifying the table name and table attributes, adding columns, modifying the column name and attributes, and dropping columns.
 
-Examples:
+Here are some examples:
 
 * Rename the `c2` field to `c3` in the `test` table and modify the field type.
 
@@ -154,9 +154,9 @@ For more information about the `ALTER TABLE` statement, see [ALTER TABLE](../../
 
 ### Drop a table
 
-Use the `DROP TABLE` statement to drop a table.
+You can execute the `DROP TABLE` statement to drop a table.
 
-Example: Drop the `test` table.
+For example, drop the `test` table.
 
 ```sql
 obclient> DROP TABLE test;
@@ -171,9 +171,9 @@ This section describes how to create, view, and drop indexes in a database. An i
 
 ### Create indexes
 
-Use the `CREATE INDEX` statement to create a table index.
+You can execute the `CREATE INDEX` statement to create a table index.
 
-Example: Create an index on the `test` table.
+For example, create an index on the `test` table.
 
 ```sql
 obclient> DESCRIBE test;
@@ -195,7 +195,7 @@ For more information about the `CREATE INDEX` statement, see [CREATE INDEX](../.
 
 You can execute the `SHOW INDEX` statement to query the indexes of a table.
 
-Example: Query the indexes of the `test` table.
+For example, query the indexes of the `test` table.
 
 ```sql
 obclient> SHOW INDEX FROM test\G
@@ -249,9 +249,9 @@ Index_comment:
 
 ### Drop an index
 
-Use the `DROP INDEX` statement to drop a table index.
+You can execute the `DROP INDEX` statement to drop a table index.
 
-Example: Drop an index from the `test` table.
+For example, drop an index from the `test` table.
 
 ```sql
 obclient> DROP INDEX test_index ON test;
@@ -262,9 +262,9 @@ For more information about the `DROP INDEX` statement, see [DROP INDEX](../../70
 
 ## Insert data
 
-Use the `INSERT` statement to insert data into an existing table.
+You can execute the `INSERT` statement to insert data into an existing table.
 
-Examples:
+Here are some examples:
 
 * Create a table named `t1` and insert a row into it.
 
@@ -310,9 +310,9 @@ For more information about the `INSERT` statement, see [INSERT](../../700.refere
 
 ## Delete data
 
-Use the `DELETE` statement to delete data. You can delete data from one or more tables.
+You can execute the `DELETE` statement to delete data from one or more tables.
 
-Examples:
+Here are some examples:
 
 * Use the `CREATE TABLE` statement to create tables `t2` and `t3`. Drop the rows whose `c1` value is 2. Note that `c1` is the `primary key` column of the `t2` table.
 
@@ -409,7 +409,7 @@ Examples:
    1 row in set
    ```
 
-* Delete the data meeting the `t2.c1 = t3.c1` condition from the `t2` and `t3` tables.
+* Delete the data meeting the `t2.c1 = t3.c1` condition from tables `t2` and `t3`.
 
    ```sql
    obclient> SELECT * FROM t2;
@@ -450,9 +450,9 @@ For more information about the `DELETE` statement, see [DELETE](../../700.refere
 
 ## Update data
 
-Use the `UPDATE` statement to modify the field values in a table.
+You can execute the `UPDATE` statement to modify the field values in a table.
 
-Examples:
+Here are some examples:
 
 * Use the `CREATE TABLE` statement to create tables `t4` and `t5`. For the row corresponding to `t4.c1=10` in the `t4` table, change its value in the `c2` column to `100`.
 
@@ -588,11 +588,11 @@ For more information about the `UPDATE` statement, see [UPDATE](../../700.refere
 
 ## Query data
 
-Use the `SELECT` statement to query data from a table.
+You can execute the `SELECT` statement to query data from a table.
 
-Examples:
+Here are some examples:
 
-* Use the `CREATE TABLE` statement to create a table named `t6`. Query the data in the `name` field from the `t6` table.
+* Use the `CREATE TABLE` statement to create a table named `t6` and query the data in the `name` field from the `t6` table.
 
    ```sql
    obclient> CREATE TABLE t6 (id INT, name VARCHAR(50), num INT);
@@ -653,7 +653,7 @@ For more information about the `SELECT` statement, see [SELECT](../../700.refere
 
 ## Commit a transaction
 
-Use the `COMMIT` statement to commit a transaction.
+You can execute the `COMMIT` statement to commit a transaction.
 
 Before you commit a transaction, note that:
 
@@ -665,7 +665,7 @@ After you commit a transaction, note that:
 * Your modifications are visible to all database sessions.
 * Your modifications are persisted into the database. You cannot use the `ROLLBACK` statement to undo them.
 
-Example: Use the `CREATE TABLE` statement to create a table named `t_insert`. Use the `COMMIT` statement to commit a transaction.
+For example, you can execute the `CREATE TABLE` statement to create a table named `t_insert` and the `COMMIT` statement to commit a transaction.
 
 ```sql
 obclient> CREATE TABLE t_insert(
@@ -717,26 +717,26 @@ For more information about transaction control statements, see [Overview of tran
 
 ## Roll back a transaction
 
-Use the `ROLLBACK` statement to roll back a transaction.
+You can execute the `ROLLBACK` statement to roll back a transaction.
 
-In a database, a transaction rollback is used to undo any changes made during a transaction. You can undo all changes made within an uncommitted transaction or roll back a transaction to a specific savepoint. To roll back to a specific savepoint, both the `ROLLBACK` and `TO SAVEPOINT` statements must be used.
+In a database, a transaction rollback is used to undo any modifications made during a transaction. You can undo all modifications made within an uncommitted transaction or roll back a transaction to a specific savepoint. To roll back to a specific savepoint, both the `ROLLBACK` and `TO SAVEPOINT` statements must be used.
 
 
-* If you undo all changes made within an uncommitted transaction:
+* If you undo all modifications made within an uncommitted transaction, note that:
 
    * The transaction will end.
    * All modifications made from the start of the transaction will be discarded.
    * All savepoints will be cleared.
    * All locks held by the transaction will be released.
 
-* If you roll back a transaction to a specific savepoint:
+* If you roll back a transaction to a specific savepoint, note that:
 
    * The transaction will not end.
    * Modifications made before the savepoint will be retained but those made after it will be discarded.
    * All savepoints after the specific savepoint will be cleared.
    * All locks held by the transaction after the specific savepoint will be released.
 
-Example: Undo all the changes of a transaction.
+For example, you can execute the following statements to undo all the modifications of a transaction.
 
 ```sql
 obclient> SELECT * FROM t_insert;
