--- a/en-US/200.quickstart/200.get-started-with-oceanbase-sql/300.basic-sql-operations-of-oracle-mode.md
+++ b/en-US/200.quickstart/200.get-started-with-oceanbase-sql/300.basic-sql-operations-of-oracle-mode.md
@@ -3,7 +3,7 @@
 This topic describes the basic SQL operations in OceanBase Database in Oracle mode.
 
 <main id="notice" >
-    <h4>Note</h4>
+    <h4>Applicability</h4>
     <p>This topic applies only to OceanBase Database Enterprise Edition. OceanBase Database Community Edition provides only the MySQL mode. </p>
   </main>
 
@@ -13,9 +13,9 @@ This section describes how to create, view, modify, and drop database tables.
 
 ### Create a table
 
-Use the `CREATE TABLE` statement to create a table in a database.
+You can execute the `CREATE TABLE` statement to create a table in a database.
 
-Example: Create a table named `test`.
+For example, create a table named `test`.
 
 ```sql
 obclient> CREATE TABLE test (c1 INT PRIMARY KEY, c2 VARCHAR(3));
@@ -26,9 +26,9 @@ For more information about the `CREATE TABLE` statement, see [CREATE TABLE](../.
 
 ### Modify a table
 
-Use the `ALTER TABLE` statement to modify the structure of an existing table, including modifying the table name and table attributes, adding columns, modifying the column name and attributes, and dropping columns.
+You can execute the `ALTER TABLE` statement to modify the structure of an existing table, including modifying the table name and table attributes, adding columns, modifying the column name and attributes, and dropping columns.
 
-Examples:
+Here are some examples:
 
 * Modify the field type of `c2` in the `test` table.
 
@@ -88,9 +88,9 @@ For more information about the `ALTER TABLE` statement, see [ALTER TABLE](../../
 
 ### Drop a table
 
-Use the `DROP TABLE` statement to drop a table.
+You can execute the `DROP TABLE` statement to drop a table.
 
-Example: Drop the `test` table.
+For example, drop the `test` table.
 
 ```sql
 obclient> DROP TABLE test;
@@ -105,9 +105,9 @@ An index is a database structure created for a table to sort data in one or more
 
 ### Create indexes
 
-Use the `CREATE INDEX` statement to create a table index.
+You can execute the `CREATE INDEX` statement to create a table index.
 
-Example: Create an index on the `test` table.
+For example, create an index on the `test` table.
 
 ```sql
 obclient> DESCRIBE test;
@@ -294,9 +294,9 @@ For more information about the `CREATE INDEX` statement, see [CREATE INDEX](../.
 
 ### Drop an index
 
-Use the `DROP INDEX` statement to drop a table index.
+You can execute the `DROP INDEX` statement to drop a table index.
 
-Example: Drop the index named `test_index`.
+For example, drop the index named `test_index`.
 
 ```sql
 obclient> DROP INDEX test_index;
@@ -307,9 +307,9 @@ For more information about the `DROP INDEX` statement, see [DROP INDEX](../../70
 
 ## Insert data
 
-Use the `INSERT` statement to add one or more records to a table.
+You can execute the `INSERT` statement to add one or more records to a table.
 
-Examples:
+Here are some examples:
 
 * Use the `CREATE TABLE` statement to create a table named `t1` and insert a row into the `t1` table.
 
@@ -374,9 +374,9 @@ For more information about the `INSERT` statement, see [INSERT](../../700.refere
 
 ## Delete data
 
-Use the `DELETE` statement to delete data.
+You can execute the `DELETE` statement to delete data.
 
-Example: Delete the row where `c1 = 2` from the `t1` table.
+For example, delete the row where `c1 = 2` from the `t1` table.
 
 ```sql
 obclient> DELETE FROM t1 WHERE c1 = 2;
@@ -396,9 +396,9 @@ For more information about the `DELETE` statement, see [DELETE](../../700.refere
 
 ## Update data
 
-Use the `UPDATE` statement to modify the field values in a table.
+You can execute the `UPDATE` statement to modify the field values in a table.
 
-Examples:
+Here are some examples:
 
 * For the row where `t1.c1 = 1` in table `t1`, set its value in column `c2` to `100`.
 
@@ -438,11 +438,11 @@ For more information about the `UPDATE` statement, see [UPDATE](../../700.refere
 
 ## Query data
 
-Use the `SELECT` statement to query data from a table.
+You can execute the `SELECT` statement to query data from a table.
 
-Examples:
+Here are some examples:
 
-* Use the `CREATE TABLE` statement to create a table named `t2`. Query the data in the `name` field from the `t2` table.
+* Use the `CREATE TABLE` statement to create a table named `t2` and query the data in the `name` field from the `t2` table.
 
    ```sql
    obclient> CREATE TABLE t2 (id INT, name VARCHAR(50), num INT);
@@ -503,13 +503,13 @@ For more information about the `SELECT` statement, see [SELECT](../../700.refere
 
 ## Commit a transaction
 
-Use the `COMMIT` statement to commit a transaction.
+You can execute the `COMMIT` statement to commit a transaction.
 
-Before you commit the transaction, your changes are not persisted and take effect only for the current session. You can use the `ROLLBACK` statement to revoke the changes.
+Before you commit the transaction, your modifications are not persisted and take effect only for the current session. You can use the `ROLLBACK` statement to revoke the modifications.
 
-After you commit the transaction, your changes take effect for all database sessions. After your changes are persisted, you cannot roll them back with a `ROLLBACK` statement.
+After you commit the transaction, your modifications take effect for all database sessions. After your modifications are persisted, you cannot roll them back with a `ROLLBACK` statement.
 
-Example: Use the `CREATE TABLE` statement to create a table named `t_insert`. Use the `COMMIT` statement to commit a transaction.
+For example, you can execute the `CREATE TABLE` statement to create a table named `t_insert` and the `COMMIT` statement to commit a transaction.
 
 ```sql
 obclient> CREATE TABLE t_insert(
@@ -561,24 +561,24 @@ For more information about transaction control statements, see [Overview of tran
 
 ## Roll back a transaction
 
-Use the `ROLLBACK` statement to roll back a transaction.
+You can execute the `ROLLBACK` statement to roll back a transaction.
 
-In a database, a transaction rollback is used to undo any changes made during a transaction. You can undo all changes made within an uncommitted transaction or roll back a transaction to a specific savepoint. To roll back to a specific savepoint, both the `ROLLBACK` and `TO SAVEPOINT` statements must be used.
+In a database, a transaction rollback is used to undo any modifications made during a transaction. You can undo all modifications made within an uncommitted transaction or roll back a transaction to a specific savepoint. To roll back to a specific savepoint, both the `ROLLBACK` and `TO SAVEPOINT` statements must be used.
 
 
-* If you undo all changes made within an uncommitted transaction:
+* If you undo all modifications made within an uncommitted transaction, note that:
    * The transaction will end.
    * All modifications made from the start of the transaction will be discarded.
    * All savepoints will be cleared.
    * All locks held by the transaction will be released.
 
-* If you roll back a transaction to a specific savepoint:
+* If you roll back a transaction to a specific savepoint, note that:
    * The transaction will not end.
    * Modifications made before the savepoint will be retained but those made after it will be discarded.
    * All savepoints after the specific savepoint will be cleared.
    * All locks held by the transaction after the specific savepoint will be released.
 
-Example: Undo all the changes of a transaction.
+For example, you can execute the following statements to undo all the modifications of a transaction.
 
 ```sql
 obclient> SELECT * FROM t_insert;
