--- a/en-US/200.quickstart/300.create-sample-application-of-oracle-mode/300.c-application-of-oracle-model.md
+++ b/en-US/200.quickstart/300.create-sample-application-of-oracle-mode/300.c-application-of-oracle-model.md
@@ -3,7 +3,7 @@
 This topic describes how to build a C application with OceanBase Database and OceanBase Call Interface (OBCI).
 
   <main id="notice" >
-    <h4>Note</h4>
+    <h4>Applicability</h4>
     <p>This topic applies only to OceanBase Database Enterprise Edition. OceanBase Database Community Edition provides only MySQL mode. </p>
   </main>
 
@@ -28,7 +28,7 @@ This topic describes how to build a C application with OceanBase Database and Oc
 Obtain a database connection string from a database deployment engineer or administrator. For example:
 
 ```sql
-obclient  -h100.88.xx.xx -usys@oracle -p***1** -P2881
+obclient  -h100.88.xx.xx -usys@oracle -p****** -P2881
 ```
 
 The database connection string contains parameters required for accessing OceanBase Database. Before you create an application, you can log on to OceanBase Database by using the database connection string, to verify that the parameters are correct.
@@ -109,7 +109,7 @@ The following describes how a C application uses OBCI to interact with an OBServ
      OCIHandleAlloc(envhp, (dvoid **)&stmthp, OCI_HTYPE_STMT, 0, 0)
    ```
 
-4. Exchange data with the OBServer node by using SQL statements, and then perform data processing. Steps of executing an SQL statement in the OBCI application:
+4. Exchange data with the OBServer node by using SQL statements, and then perform data processing. Steps of executing an SQL statement in the OBCI application are as follows:
 
    1. Call the `OCIStmtPrepare()` or `OCIStmtPrepare2()` function to prepare an SQL statement.
 
@@ -356,4 +356,4 @@ PERSONID  NAME      email
 
 ## More information
 
-For more information about how to install and use OBCI, see [OBCI](https://en.oceanbase.com/docs/enterprise-obci-en-10000000000835813).
+For more information about OBCI, see the [OBCI documentation](https://en.oceanbase.com/docs/obci-en).
