--- a/en-US/500.data-migration/1000.use-sql-statements-migrate-data/300.use-outfile-statements-to-migrate-data.md
+++ b/en-US/500.data-migration/1000.use-sql-statements-migrate-data/300.use-outfile-statements-to-migrate-data.md
@@ -1,6 +1,6 @@
 # Export data by using OUTFILE statements
 
-This topic describes how to use a `SELECT INTO OUTFILE` statement to export data. The `SELECT INTO OUTFILE` statement allows you to specify the fields to be exported, and is preferred when primary key fields do not need to be exported. You can use this statement in combination with the `LOAD DATA INFILE` statement to facilitate data import and export.
+This topic describes how to use a `SELECT INTO OUTFILE` statement to export data.  The `SELECT INTO OUTFILE` statement allows you to specify the fields to be exported, and is preferred when primary key fields do not need to be exported. You can use this statement in combination with the `LOAD DATA INFILE` statement to facilitate data import and export.
 
 ## Background
 
@@ -11,7 +11,7 @@ OceanBase Database is compatible with the `SELECT INTO OUTFILE` statement.
 | MySQL mode | V2.2.40 and later | MySQL client and OBClient |
 | Oracle mode | V2.2.40 and later | OBClient |
 
-<main id="notice" type='notice'>
+  <main id="notice" type='notice'>
     <h4>Notice</h4>
     <p>To import data into and export data from OceanBase Database, the client must be connected to the OceanBase Database instance directly. </p>
   </main>
@@ -26,13 +26,13 @@ INTO OUTFILE file_route_option
 FROM table_name_list
 [WHERE where_conditions]
 [GROUP BY group_by_list [HAVING having_search_conditions]]
-[ORDER BY order_expression_list] 
+[ORDER BY order_expression_list]
 
 column_list_option:
     column_name[,column_name]...
 
 file_route_option:
-    '/path/file' 
+    '/path/file'
     | 'oss://$PATH/$FILENAME/?host=$HOST&access_id=$ACCESS_ID&access_key=$ACCESSKEY'
 
 format_of_field_option:
@@ -42,7 +42,7 @@ format_of_field_option:
         [ESCAPED BY 'char']
 
 start_and_end_option:
-    LINES 
+    LINES
         [STARTING BY 'string']
         [TERMINATED BY 'string']
 ```
@@ -50,12 +50,12 @@ start_and_end_option:
 | Parameter | Required | Description | Example |
 |------------------------|---------|----------|---------------------|
 | column_list_option | Yes | Column options for the export. To select all data, use an asterisk (`*`). </br>`column_name`: The name of the column to be exported.  | `SELECT col1,col2,col3 ...` |
-| file_route_option | Yes | The path of the exported file. Alibaba Cloud Object Storage Service (OSS) is supported. <blockquote>**Note** </br>OSS has a restriction on the file size. If a file exported to OSS exceeds 5 GB, the file is split into multiple files, each smaller than 5 GB. </blockquote> | `... INTO OUTFILE '/home/admin/student.sql' ...` |
+| file_route_option | Yes | The path of the exported file. Alibaba Cloud Object Storage Service (OSS) is supported. <main id="notice" type='explain'><h4>Note</h4><p>Alibaba Cloud OSS does not support files larger than 5 GB. When you export a file larger than 5 GB to Alibaba Cloud OSS, it is split into multiple smaller files. </p></main> | `... INTO OUTFILE '/home/admin/student.sql' ...` |
 | format_of_field_option | No | Field format options for the export. You can use the `FIELDS` or `COLUMNS` clause to specify the format of each field in the output file. <ul><li>`TERMINATED BY`: specifies the separator between field values. For example, `TERMINATED BY ','` specifies that field values are separated with commas (,). </li><li>`ENCLOSED BY`: specifies the symbol for enclosing field values. For example, `ENCLOSED BY '"'` specifies that character values are enclosed within a pair of double quotation marks (""). If the `OPTIONALLY` keyword is used, only values of the string type are enclosed within the specified symbols. </li><li>`ESCAPED BY`: specifies the escape character. For example, `ESCAPED BY '*'` indicates that the asterisk (*) but not the backslash (\\) is used as the escape character. The backslash (\\) is the default escape character. </li></ul> | `... TERMINATED BY ',' ENCLOSED BY '"' ...` |
-| start_and_end_option | No | Start and end character options for exported data rows. `LINES`: specifies the characters to enclose each line in the output file. <ul><li>`STARTING BY`: specifies the character to start each line. </li><li>`TERMINATED BY`: specifies the character to end each line. </li></ul> | `... LINES TERMINATED BY '\n' ...` specifies that a row ends with a line feed.  |
+| start_and_end_option | No | Start and end character options for exported data rows. `LINES` specifies the characters to enclose each line in the output file. <ul><li>`STARTING BY`: specifies the character to start each line. </li><li>`TERMINATED BY`: specifies the character to end each line. </li></ul> | `... LINES TERMINATED BY '\n' ...` specifies that a row ends with a line feed.  |
 | FROM table_name_list | Yes | The object from which data is selected.  | `... FROM tbl1,tbl2 ...` |
 | WHERE where_conditions | No | The filter condition. Only data that meets the condition is returned in the query results.  | `... WHERE col1 > 100 ...` |
-| GROUP BY group_by_list | No | The grouping field, which is usually used together with aggregate functions. <blockquote><b>Note</b></br>If no column following the `SELECT` clause uses any aggregate function, the columns following the SELECT clause must be specified after the `GROUP BY` clause. </blockquote> | `... GROUP BY col1,col2 ...` |
+| GROUP BY group_by_list | No | The grouping field, which is usually used together with aggregate functions. <main id="notice" type='explain'><h4>Note</h4><p>If no column following the <code>SELECT</code> clause uses any aggregate function, the columns following the `SELECT` clause must be specified after the <code>GROUP BY</code> clause. </p></main> | `... GROUP BY col1,col2 ...` |
 | HAVING having_search_conditions | No | Filters the grouped data. The `HAVING` clause is similar to the `WHERE` clause, but the `HAVING` clause can reference an aggregate function such as `SUM` and `AVG`.  | `... HAVING SUM(col1) < 160 ...` |
 | ORDER BY order_expression_list | No | Sorts the query results by one or multiple columns in ascending (`ASC`) or descending (`DESC`) order. If you do not specify `ASC` or `DESC`, the default value `ASC` is used. <ul><li>`ASC`: indicates an ascending order. </li><li>`DESC`: indicates a descending order. </li></ul> | `... ORDER BY col1,col2 DESC ...` |
 
@@ -94,7 +94,7 @@ The following takes exporting data to a local device as an example to describe h
     <p>For security reasons, when you set the system variable <code>secure_file_priv</code>, you can use only the local client to execute the SQL statement that modifies the global variable. For more information, see <a href="../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11500.secure_file_priv-global.md">secure_file_priv</a>. </p>
     </main>
 
-    1. Log on to the OBServer to connect to.
+    1. Log on to the OBServer node to connect to.
     
         ```bash
         [xxx@xxx /home/admin]# ssh admin@xxx.xxx.xxx.xxx
@@ -118,7 +118,7 @@ The following takes exporting data to a local device as an example to describe h
         Query OK, 0 rows affected
         ```
 
-3. Use the `SELECT INTO OUTFILE` statement to export data from the `tbl1` table. The name of the exported file is `tbl1.sql`. The field values are separated with a comma (,). The values of the string type are enclosed within a pair of double quotations marks (`"`). The end symbol is a line feed.
+3. After you reconnect to the database, execute the `SELECT INTO OUTFILE` statement to export data from the `tbl1` table. The name of the exported file is `tbl1.sql`. The field values are separated with a comma (,). The values of the string type are enclosed within a pair of double quotations marks (`"`). The end symbol is a line feed.
 
    ```sql
    obclient [test]> SELECT * INTO OUTFILE '/home/admin/tbl1.sql'
@@ -128,7 +128,7 @@ The following takes exporting data to a local device as an example to describe h
    Query OK, 3 rows affected
    ```
 
-4. Log on to the OBServer and check the information about the exported file in the `/home/admin` directory on your local device.
+4. Log on to the OBServer node and check the information about the exported file in the `/home/admin` directory on your local device.
 
    ```bash
    [xxx@xxx /home/admin]# cat tbl1.sql
