--- a/en-US/500.data-migration/700.migrate-data-from-csv-file-to-oceanbase-database/200.use-the-load-command-to-load-the-csv-data-file-to-the-oceanbase-database.md
+++ b/en-US/500.data-migration/700.migrate-data-from-csv-file-to-oceanbase-database/200.use-the-load-command-to-load-the-csv-data-file-to-the-oceanbase-database.md
@@ -1,14 +1,14 @@
 # Import data by using the LOAD DATA statement
 
-OceanBase Database allows you to use the LOAD DATA statement to import data from external files to database tables.
+OceanBase Database allows you to use the `LOAD DATA` statement to import data from external files to database tables.
 
 ## Scenarios
 
-You can use the LOAD DATA statement to import a CSV text file in the following process:
+You can use the `LOAD DATA` statement to import a CSV text file in the following process:
 
-   <main id="notice" type='notice'>
+  <main id="notice" type='notice'>
     <h4>Notice</h4>
-    <p>The CSV file must be located on the current OBServer. The current OceanBase Database version does not support loading data from a remote client. </p>
+    <p>The CSV file must be located on the current OBServer node. The current OceanBase Database version does not support loading data from a remote client. </p>
   </main>
 
 1. Parse the file.
@@ -17,15 +17,15 @@ You can use the LOAD DATA statement to import a CSV text file in the following p
 
 2. Distribute data.
 
-   OceanBase Database is a distributed database system. Data of each partition may be distributed across different OBServers. The LOAD DATA statement is used to process the parsed data and determine the OBServer to which the data is sent.
+   OceanBase Database is a distributed database system. Data of each partition may be distributed across different OBServer nodes. The LOAD DATA statement is used to process the parsed data and determine the OBServer node to which the data is sent.
 
 3. Insert data.
 
-   After the destination OBServer receives the data, it executes the INSERT statement to insert the data into the corresponding partition.
+   After the destination OBServer node receives the data, it executes the INSERT statement to insert the data into the corresponding partition.
 
 ## LOAD DATA
 
-### Obtain the privilege to execute the LOAD DATA statement.
+### Obtain the privilege to execute the LOAD DATA statement
 
 You need to perform the following steps to grant the access to a file on the server:
 
@@ -36,9 +36,9 @@ You need to perform the following steps to grant the access to a file on the ser
     <p>For security reasons, the following SQL statement can only be executed locally but cannot be executed on a remote OBClient. For more information, see <a href="../../700.reference/500.system-reference/200.system-variable/300.global-system-variable/11500.secure_file_priv-global.md">secure_file_priv</a>. </p>
     </main>
 
-    ```sql
-    SET GLOBAL SECURE_FILE_PRIV = "";
-    ```
+   ```sql
+   SET GLOBAL SECURE_FILE_PRIV = "";
+   ```
 
 2. Grant privileges to the user.
 
@@ -48,13 +48,13 @@ You need to perform the following steps to grant the access to a file on the ser
    GRANT FILE ON *.* TO user_name;
    ```
 
-### Syntax of the LOAD DATA statement:
+### Syntax of LOAD DATA
 
 ```sql
 LOAD DATA
     [/*+ parallel(N)*/]
     INFILE 'file_name'
-    [REPLACE | IGNORE] //The REPLACE and IGNORE options are applicable to MySQL tenants only.
+    [REPLACE | IGNORE] // The REPLACE and IGNORE options are applicable to MySQL tenants only.
     INTO TABLE tbl_name
     [{FIELDS | COLUMNS}
         [TERMINATED BY 'string']
@@ -70,20 +70,20 @@ LOAD DATA
         [, col_name_var] ...)]
 ```
 
-| Parameter | Required | Description | Example |
-|---------------------------------------------------------------------------------------------------------------------------------|------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------|
-| \[/\*+ parallel(N)\*/\] | No | The DOP for loading data. We recommend that you set this option to a value within the range of \[0, Maximum number of CPUs of the tenant\]. | /\*+ parallel(4) \*/ |
-| INFILE 'file_name' | Yes | The path and file name of the input file.  | infile '/home/admin/a.csv' |
-| \[REPLACE \| IGNORE\] | No | Specifies how to process duplicate data. The LOAD DATA statement uses the primary key of a table to identify duplicate data. If the table does not have a primary key, the LOAD DATA statement cannot identify duplicate data, and the `REPLACE` and `IGNORE` options have the same effect.  `REPLACE`: specifies to replace the original data in the table with data in the input file.  `IGNORE`: specifies to ignore duplicate data in the input file.  <br></br>**Note**</br>If you do not specify this option, the LOAD DATA statement records the erroneous data into the log file when duplicate data exists. | REPLACE |
-| INTO TABLE tbl_name | Yes | The target table name.  | into table tbl_name |
-| \[{FIELDS \| COLUMNS} \[TERMINATED BY 'string'\] \[\[OPTIONALLY\] ENCLOSED BY 'char'\] \[ESCAPED BY 'char'\] \] | No | Specifies the field separator in the input file.  `TERMINATED BY`: specifies the field separator.  `ENCLOSED BY`: specifies whether the start and end of each field contain specific characters.  `ESCAPED BY`: specifies the wildcard in fields.  <br></br>**Note**</br>If this clause is not specified, the default value is `terminated by '\\t' enclosed by '' escaped by '\\\\'`. | fields terminated by ',' |
-| \[LINES \[STARTING BY 'string'\] \[TERMINATED BY 'string'\] \] | No | Specifies the characters to enclose each line in the input file in the Lines clause.  `STARTING BY`: specifies the character to start each line.  `TERMINATED BY`: specifies the character to end each line.<br></br>  **Note**</br>If this clause is not specified, the default value is `STARTING BY ''  terminated by '\\n`'. | lines terminated by '\\n' |
-| \[IGNORE number {LINES \| ROWS}\] | No | Specifies to ignore the first N rows in the input file, where N is specified by the `number` parameter.  | ignore 1 lines |
-| \[(col_name_var \[, col_name_var\] ...) \] | No | Specifies the relationship between the columns in the target table and the fields in the input file.  By default, fields in the input file are mapped to columns in the destination table in a one-to-one correspondence. If you use `col_name_or_user_var` to specify the mapping relationship between fields in the input file and columns in the destination table, the LOAD DATA statement maps the columns in the destination table based on the specified column names. Columns that are not specified are set to NULL.  If the input file does not contain all the columns, the missing columns are filled based on the following mappings: Character data type: null string; Numeric data type: 0; Date data type: 0000-00-00; To add a null value, use "\\N" in the input file.  | (id, names) |
+| Parameter | Required | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | Example                    |
+|---------------------------------------------------------------------------------------------------------------------------------|------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------|
+| \[/\*+ parallel(N)\*/\] | No | The DOP for loading data. We recommend that you set this option to a value within the range of \[0, Maximum number of CPU cores of the tenant\].                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          | /\*+ parallel(4) \*/       |
+| INFILE 'file_name' | Yes | The path and file name of the input file.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 | INFILE '/home/admin/a.csv' |
+| \[REPLACE \| IGNORE\] | No | Specifies how to process duplicate data. The `LOAD DATA` statement uses the primary key of a table to identify duplicate data. If the table does not have a primary key, the `LOAD DATA` statement cannot identify duplicate data, and the `REPLACE` and `IGNORE` options have the same effect.  <ul><li>`REPLACE`: specifies to replace the original data in the table with data in the input file.  <li>`IGNORE`: specifies to ignore duplicate data in the input file.  <main id="notice" type='explain'><h4>Note</h4><p>If you do not specify this option, the <code>LOAD DATA</code> statement records the wrong data into the log file when duplicate data exists. </p></main>                                                                                                                       | REPLACE                    |
+| INTO TABLE tbl_name | Yes | The target table name.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    | INTO TABLE tbl_name        |
+| \[{FIELDS \| COLUMNS} \[TERMINATED BY 'string'\] \[\[OPTIONALLY\] ENCLOSED BY 'char'\] \[ESCAPED BY 'char'\] \] | No | Specifies the field separator in the input file.  <ul><li>`TERMINATED BY`: specifies the field separator.  <li>`ENCLOSED BY`: specifies whether the start and end of each field contain specific characters.  <li>`ESCAPED BY`: specifies the wildcard in fields.  <main id="notice" type='explain'><h4>Note</h4><p>If this clause is not specified, the default value is <code>TERMINATED BY '\t' ENCLOSED BY '' ESCAPED BY '\\'</code>.</p></main>                                                                                                                                                                                                                                                                                                                                      | FIELDS TERMINATED BY ','   |
+| \[LINES \[STARTING BY 'string'\] \[TERMINATED BY 'string'\] \] | No | Specifies the characters to enclose each line in the input file in the Lines clause.  <ul><li>`STARTING BY`: specifies the character to start each line.  <li>`TERMINATED BY`: specifies the character to end each line. <main id="notice" type='explain'><h4>Note</h4><p>If this clause not specified, the default value is <code>STARTING BY ''  TERMINATED BY '\n'</code>.</p></main>                                                                                                                                                                                                                                                                                                                                                                                                  | LINES TERMINATED BY '\\n'  |
+| \[IGNORE number {LINES \| ROWS}\] | No | Specifies to ignore the first N rows in the input file, where N is specified by the `number` parameter.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | IGNORE 1 LINES             |
+| \[(col_name_var \[, col_name_var\] ...) \] | No | Specifies the relationship between the columns in the target table and the fields in the input file.  By default, fields in the input file are mapped to columns in the destination table in a one-to-one correspondence. If you use `col_name_or_user_var` to specify the mapping relationship between fields in the input file and columns in the destination table, the LOAD DATA statement maps the columns in the destination table based on the specified column names. Columns that are not specified are set to NULL.  If the input file does not contain all the columns, the missing columns are filled based on the following mappings: character data type: empty string; numeric data type: 0; date data type: 0000-00-00. To add a null value, use "\\N" in the input file. | (id, names)                |
 
 ### Log files
 
-If an error occurs during the import, the INSERT statement is rolled back, and the LOAD DATA statement generates a log file named `obloaddata.log <XXXXXX>` in the `\log` subdirectory of the installation directory of the OBServer. The following example shows the content of a log file. The log contains the basic information about the task generated by the LOAD DATA statement, including the tenant name, input file name, destination table name, DOP, LOAD DATA command used, and error details in lines.
+If an error occurs during the import, the INSERT statement is rolled back, and the LOAD DATA statement generates a log file named `obloaddata.log <XXXXXX>` in the `\log` subdirectory of the installation directory of the observer process. The following example shows the content of a log file. The log contains the basic information about the task generated by the LOAD DATA statement, including the tenant name, input file name, destination table name, DOP, LOAD DATA command used, and error details in lines.
 
 ```unknow
 Tenant name:    mysql
