--- a/en-US/100.learn-more-about-oceanbase/100.what-is-oceanbase.md
+++ b/en-US/100.learn-more-about-oceanbase/100.what-is-oceanbase.md
@@ -33,4 +33,4 @@ You can learn more about OceanBase Database by reading the following topic:
 
 * [System architecture](../100.learn-more-about-oceanbase/300.system-architecture.md)
 
-<!-- * [System concepts of OceanBase Database](../700.reference/100.oceanbase-database-concepts/100.architecture-of-oceanbase.md) 链接待放开-->
+<!-- * [System concepts of OceanBase Database](../700.reference/100.oceanbase-database-concepts/100.architecture-of-oceanbase.md) -->
