--- a/en-US/100.learn-more-about-oceanbase/300.system-architecture.md
+++ b/en-US/100.learn-more-about-oceanbase/300.system-architecture.md
@@ -112,4 +112,4 @@ ODP can be deployed on each application server that needs to access OceanBase Da
 
 For more information about the overall architecture of OceanBase Database, see the following topic:
 
-* [Overall architecture of OceanBase Database](../700.reference/100.oceanbase-database-concepts/100.architecture-of-oceanbase.md) 链接待放开 -->
+* [Overall architecture of OceanBase Database](../700.reference/100.oceanbase-database-concepts/100.architecture-of-oceanbase.md)  -->
