--- a/en-US/200.quickstart/100.quickly-experience-oceanbase-for-community.md
+++ b/en-US/200.quickstart/100.quickly-experience-oceanbase-for-community.md
@@ -32,7 +32,7 @@ OceanBase Database provides an all-in-one installation package since V4.0.0. You
 
    OCP Express is a web-based management tool for OceanBase Database V4.x. Integrated with an OceanBase cluster, OCP Express allows you to view key performance metrics of the cluster and perform basic database management operations on the cluster. 
    
-   <!-- For more information, see [OCP Express](../700.reference/600.oceanbase-tools/400.1.ocp-express/100.ocp-express.md). 链接待放开 -->
+   <!-- For more information, see [OCP Express](../700.reference/600.oceanbase-tools/400.1.ocp-express/100.ocp-express.md).  -->
 
 * OBAgent
 
@@ -151,7 +151,7 @@ If you have multiple servers available, you can run the `obd web` command to sta
 <!-- <main id="notice" type='explain'>
   <h4>Note</h4>
   <p> This section describes only simple operations needed to quickly deploy a distributed OceanBase cluster. For more information, see <a href="../400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/400.deploy-by-ui/100.deploy-by-obd.md">Deploy an OceanBase cluster on the GUI of OBD</a>. </p>
-</main> 链接待放开-->
+</main> -->
 
 ### Step 1: Download and install the all-in-one package
 
