--- a/en-US/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/500.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/en-US/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/500.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -5,7 +5,7 @@ This topic describes how to deploy OceanBase Database in a production environmen
 <!-- <main id="notice" type='explain'>
   <h4>Note</h4>
   <p>OBD allows you to deploy OceanBase Database in a production environment both by using a CLI and on the GUI. We recommend that you deploy an OceanBase cluster on the GUI of OBD. For more information, see <a href="4.deploy-by-ui/1.deploy-by-obd.md">Deploy an OceanBase cluster on the GUI of OBD</a>. </p>
-</main>链接待放开 -->
+</main> -->
 
 ## Concepts
 
@@ -446,7 +446,7 @@ obclient -h10.10.10.4 -P2883 -uroot@sys -p -c -A
 
 In this command, `IP` is the IP address for connecting to OceanBase Database. `PORT` is the port for connecting to OceanBase Database, which is the value of `mysql_port` if you connect to the database directly or the value of `listen_port` if you connect to the database by using ODP.
 
-<!-- For more information about how to connect to an OceanBase cluster by using OBClient, see [Connect to an OceanBase Database tenant by using OBClient](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md).链接待放开 -->
+<!-- For more information about how to connect to an OceanBase cluster by using OBClient, see [Connect to an OceanBase Database tenant by using OBClient](../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md). -->
 
 ### Step 5: Create user tenants
 
