--- a/zh-CN/600.manage/400.high-availability/400.arbitration-high-availability/410.view-the-upgrade-and-degradation-of-log-streams.md
+++ b/zh-CN/600.manage/400.high-availability/400.arbitration-high-availability/410.view-the-upgrade-and-degradation-of-log-streams.md
@@ -1,6 +1,6 @@
-# 查看日志流的升降级情况
+# 查看日志流升降级相关信息
 
-为租户开启仲裁服务后，您可以通过视图查看日志流的升级或降级情况。
+为租户开启仲裁服务后，您可以通过视图查看日志流升级或降级的相关信息。
 
 ## 查看日志流的升降级事件
 
@@ -16,7 +16,7 @@
         SELECT * FROM oceanbase.DBA_OB_SERVER_EVENT_HISTORY WHERE event LIKE "DEGRADE";
         ```
 
-        如果查询结果为空，则表示当前未发生日志流降级事件。
+        如果查询结果为空，则表示当前未发生日志流降级事件，否则，查询结果中会显示发生了日志流降级的副本信息。
 
    * 查询日志流升级事件
 
@@ -24,7 +24,7 @@
         SELECT * FROM oceanbase.DBA_OB_SERVER_EVENT_HISTORY WHERE event LIKE "UPGRADE";
         ```
 
-        如果查询结果为空，则表示当前未发生日志流升级事件。
+        如果查询结果为空，则表示当前未发生日志流升级事件，否则，查询结果中会显示发生了日志流降级的副本信息。
 
 ## 查看日志流的升降级结果
 
