--- a/zh-CN/700.reference/100.oceanbase-database-concepts/900.storage-architecture/200.data-storage/400.compression-and-encoding.md
+++ b/zh-CN/700.reference/100.oceanbase-database-concepts/900.storage-architecture/200.data-storage/400.compression-and-encoding.md
@@ -89,7 +89,7 @@ Oracle 模式中的取值及其说明如下表所示。
 |------------------------|------------|------------------------------------------------------------------|
 | nocompress             | none       | flat                                                             |
 | compress basic         | lz4_1.0    | flat                                                             |
-| compress for oltp      | zstd_1.3.8 | flat                                                             |
+| compress for oltp      | lz4_1.0    | flat                                                             |
 | compress for query     | lz4_1.0    | encoding                                                         |
 | compress for archive   | zstd_1.3.8 | encoding                                                         |
 | compress for query low | lz4_1.0    | selective encoding  (encoding 的子集，只使用查询更友好的编码方式) |
