--- a/zh-CN/700.reference/100.oceanbase-database-concepts/900.storage-architecture/100.storage-architecture-overview.md
+++ b/zh-CN/700.reference/100.oceanbase-database-concepts/900.storage-architecture/100.storage-architecture-overview.md
@@ -74,7 +74,7 @@ OceanBase 数据库本质上是一个基线加增量的存储引擎，在保持 
   
 * 查询
 
-  由于增量更新的策略，查询每一行数据的时候需要根据版本从新到旧遍历所有的 MemTable 以及 SSTable，将每个 Table 中对应主键的数据熔合在一起返回。数据访问过程中会根据需要利用 Cache 加速，同时针对大查询场景，SQL 层会下压过滤条件到存储层，利用存数据特征进行底层的快速过滤，并支持向量化场景的批量计算和结果返回。
+  由于增量更新的策略，查询每一行数据的时候需要根据版本从新到旧遍历所有的 MemTable 以及 SSTable，将每个 Table 中对应主键的数据熔合在一起返回。数据访问过程中会根据需要利用 Cache 加速，同时针对大查询场景，SQL 层会下压过滤条件到存储层，利用存储数据特征进行底层的快速过滤，并支持向量化场景的批量计算和结果返回。
   
 * 多级缓存
 
