--- a/zh-CN/800.FAQ/100.oceanbase-products-faq.md
+++ b/zh-CN/800.FAQ/100.oceanbase-products-faq.md
@@ -122,7 +122,7 @@ OceanBase 数据库中主要有以下内存区域：
 
 ### OceanBase 数据库的资源在租户中哪些是共享的，哪些是不共享的？
 
-对内存而言，`sql work area、memory store` 与 `kv cache` 等资源为租户独享；`system memory` 为多个租户共享。对线程而言，`sql worker` 为租户间隔离；`Net IO`、`Disk IO` 与 `Clog Writer` 等资源为租户间不隔离。
+对内存而言，`sql work area、memory store` 与 `kv cache` 等资源为租户独享；`system memory` 为多个租户共享。对线程而言，`sql worker` 为租户间隔离；`Net IO`、`Disk IO` 等资源为租户间不隔离。
 
 ### OceanBase 数据库的内存使用有什么特征？
 
