--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/400.functions-of-mysql-mode/700.json-functions-of-mysql-mode/450.json-table-functions-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/400.functions-of-mysql-mode/700.json-functions-of-mysql-mode/450.json-table-functions-of-mysql-mode.md
@@ -125,7 +125,7 @@ INSERT INTO t SELECT * FROM
                              d DECIMAL PATH '$.c' DEFAULT '999' ON ERROR)
             ) AS jt;
 SELECT * FROM t ORDER BY id;
-DROP TABLE t;
+DROP TABLE t2;
 ```
 
 ## 相关文档
